--- a/manage/02.信息系统项目管理师/02.信息系统与信息化基础知识.md
+++ b/manage/02.信息系统项目管理师/02.信息系统与信息化基础知识.md
@@ -2,3 +2,121 @@
     1. 系统架构是将系统整体分解为更小的子系统和组件，从而形成不同的逻辑层或服务。之后，进一步确定各层的接口，层与层相互之间的关系。对整个系统的分解，既需要进行“纵向”分解，也需要对同一逻辑层分块，进行“横向”分解。系统的分解可参考“架构模式”进行。
     2. 通过对系统的一系列分解，最终形成系统的整体架构。系统的选型主要取决于系统架构。 
     3. 人机界面设计是系统详细设计之一；确定系统架构时，既要对整个系统进行纵向分解也需要同一逻辑层分块进行横向分解；`设备选型`与法律有关；`系统架构设计对设备选型起决定作用`
+2. 国家信息化体系要素
+    1. 习题
+        1. 解析：国家信息化体系要素中，（ ）是国家信息化的主阵地，集中体现了国家信息化建设的需求和效益。http://www.cnitpm.com/pm1/49547.html
+        2. 解析：开展区域链技术的商业试探性应用，属于国家信息化体系中的（）要素。 http://www.cnitpm.com/pm1/55689.html
+    2. 两网、一站、四库、十二金。我国大规模开展信息化工作已经20多年，信息系统已成为保障国家安全、支撑政府行政职能、维护社会和谐稳定、促进民生经济发展等各大战略层面的重要支柱。二十多年来，我国陆续建成了以“两网、一站、四库、十二金”工程为代表的国家级信息系统，形成了以信息系统为核心支撑的国家信息化运行体系。" "十二五”朔间，“智慧城市”作为新兴的国家级战略规划，其建设成效又将直接影响我国各大城市在国际社会的竞争力和影响力。
+        1. “两网”是指政务内网和政务外网；
+        2. “一站”是指政府门户网站；`政府门户网站是面向公众的G2C`
+        3. “四库”即建立人口、法人单位、空间地理和自然资源、宏观经济等四个基础数据库；
+        4. “十二金”则是要重点推进办公业务资源系统等十二个业务系统。这十二个重点业务系统又可以分为三类，一类是对加强监管、提高效率和推进公共服务起到核心作用的办公业务资源系统、宏观经济管理系统建设；第二类是增强政府收入能力、保证公共支出合理性的金税、金关、金财、金融监管(含金卡)、金审等5个业务系统建设；第三类是保障社会秩序、为国民经济和社会发展打下坚实基础的金盾、社会保障、金农、金水、金质等5个业务系统建设
+    3. 在国家信息化的过程中，出台了一些规范、指导信息系统建设的通用体系模型，其中，1997年由国务院信息化工作领导小组发布的《国家信息化“九五”规划和2010年远景目标纲要》中提出的国家信息化体系对我国信息化建设具有深远影响。
+    4. 国家信息化体系包括信息技术应用、信息资源、信息网络、信息技术和产业、信息化人才、信息化法规政策和标准规范6个要素，这6个要素按照图1-1所示的关系构成了一个有机的整体。
+        1. `信息技术应用`。
+            1. 信息技术应用是指把信息技术广泛应用于经济和社会各个领域。信息技术应用是信息化体系6要素中的龙头，`是国家信息化建设的主阵地`，集中体现了国家信息化建设的需求和效益。信息技术应用工作最大、涉及而广，直接关系到国民经济整体素质、效益和几民生活质量}舟提高。信息技术应用向其他5个要素提出需求，而其他5个要素又反过来支持信息技术应用。推进国民经济信息化的进程，就是在国民经济各行各业广泛应用现代信息技术，深入开发和有效利用信息资源，提高管理水平、劳动效率和经济效益，提升产业结构和素质，推进国民经济更加迅速、健康的发展，从而加速实现国家现代化的进程。
+            2. 传统的信息技术包括计算工程、软件工程、网络工程、数据工程、信息安全等，而新一代信息技术诸如云计算、大数据、人工智能、物联网、移动互联、`区块链等已经在两化融合`、智能制造、智慧城市、电子商务等领域有了较为成熟和广泛的应用，极大地推动了国民经济发展。2016年3月，基于人工智能技术的AlphaGo系统在与九段围棋棋手李世石对弈中4:1获胜（见图1-3），“中国围棋是最后一项电脑无论如何也无法战胜人类”的说法成为了过去，这标志着人工智能又取得了一个新的发展里程碑。
+        2. 信息资源
+            1. 信息资源、材料资源和能源共同构成了国民经济和社会发展的三大战略资源。信息资源的开发利用是国家信息化的核心任务，是国家信息化建设取得实效的关键，也是我圈信息化的薄弱环节。信息资源开发和利用的程度是衡量国家信息化水平的一个重要标志。信息资源在满足信息技术应用提出的需求的同时，对其他4个要素提出需求。图1-4显示了信息资源在信息系统中的核心地位，以及大数据时代数据管理工程师岗位的重要性。
+            2. 在人类赖以生存和发展的自然界，可以开发利用的材料资源和能源资源是有限的，绝大多数又是不可再生、不可共享的。而且，对材料资源和能源资源的开发利用必然产生对环境的污染和对自然界的破坏。与此相反，信息资源是无限的、可再生的、可共享的，其开发利用不但很少产生新的污染，而且会大大减少材料和能源的消耗，从而相应地减少了污染。
+            3. 信息资源与自然资源、物质资源相比，具有以下7个特点：
+                1. 能够重复使用，其价值在使用中得到体现；
+                2. 信息资源的利用具有很强的目标导向，不同的信息在不同的用户中体现不同的价值；
+                3. 具有广泛性。人们对其检索和利用，不受时间、空间、语言、地域和行业的制约；
+                4. 是社会公拭财富，也是商品，可以被交易或者交换：
+                5. 具有流动性，通过信息网可以快速传输；
+                6. 多态性，信息资源可以以数字、文字、图像、声音、视频等多种形态存在；
+                7. 融合性，整合不同的信息资源并分析、挖搁，可以得到新的知识，取得比分散信息资源更高的价值。
+        3. 信息网络
+            1. 信息网络是信息资源开发利用和信息技术应用的基础，是信息传输、交换和共享的必要手段。只有建设先进的信息网络，才能充分发挥信息化的整体散益。信息网络是现代化国家的重要基础设施。信息网络在满足信息技术应用和信息资源分布处理i所需的传输与通信功能的同时，对其他3个要素提出需求。
+            2. 目前，人们通常将信息网络分为电信刚、广播电视网和计算机网。这3种网络有各自的形成过程、服务对象、发展模式。3种网络的功能有所交叉，又互为补充。3种网络的发展方向是：互相融通，取长补短，逐步实现三网融合。
+            3. 从技术上看，三网融合是指电信网、广播电视网、计算机网在向宽带通信网、数字电视网、下一代互联网演进过程中，三大网络通过技术改造，其技术功能趋于一致，业务范围趋于相同，网络互联互通、资源共享，能为用户提供语音、数据和广播电视等多种服务。三网融合并不意昧着三大网络的物理合1，而主要是指高层业务应用的融合。三网融合应用广泛，遍及智能交通、环境保护、政府工作、公共安全、平安家居等多个领域。
+            4. 工业和信息化都发布的《通信业“十二五”发展规划》指出，将推动广电、电信业务双向进入。积极推动落实国务院三网融合有关要求，向符合许可条件的企业颁发相应的业务经营许可。组织对试点地区实施效果进行总结评估，重点评估试点业务种类、运营方式、配套措施等实施情况。根据试点情况，在总结评估基础卜，逐步扩大试点广度和范围，推进广电、电信业务双向进入。
+            5. 目前，我国三网融合已经取得了较大进展，例如：移动电话可以看电视、上网，智能电视司以浏览网页、运行微信等网络应用，电脑也可以打电话、看电视。三者之间相互交叉，形成“你中有我、我中有你”的格局。
+        4. 信息技术和产业
+            1. 信息技术和产业是我国进行信息化建设的基础。我国是一个大国，又是发展中国家，不可能电不应该过多依靠从国外购买信息技术和装备来实现信息化。我国的国家信息化必须立足于自主发展。为了国家的主权和安全，关键的信息技术和装备必须由我们自己研究、制造、供应。所以，我们必须大力发展自主的信息产业，才能满足信息技术应用、信息资源开发利用和信息网络建设的需求。随着我国国民经济快速持续的发展和信息化进程的不断加快，各行各业对信息基础设施、信息产品与软件产品、信息技术和信息服务的需求急剧增长，这电为信息产业的发展提供了巨大的市场空间，从而带动我国信息产业的高速发展。如图1-5所示是2010—2015年我国电子信息产业的增长情况。
+            2. 过去20年，我国的信息化产业取得了巨大的发展和进步。2015年，我国规模以上电子信息产业企业个数6 08万家，其中电子信息制造企业1 99万家，软件和信息技术服务企业4 09万家。全年完成销售收入总规模达到15,4万亿元，同比增长10.4%；其中，电子信息制造业实现主营业务收入11.1万亿元，同比增长7.6%；软件和信息技术服务业实现软件业务收入4 3万亿元，同比增长16.6%（数据来源：工业和信息化部《2015年电子信息产业统计公报》）。
+        5. 信息化人才
+            1. 信息化人才是国家信息化成功之本，对其他各要素的发展速度和质量有着决定性的影响，是信息化建设的关键。只有尽快建立结构合理、高素质的研究、开发、生产、应用和管理队伍，才能适应国家信息化建设的需要。信息化体系各要素都需要多门类、多层次、高水平人才的支持。要充分利用学校教育、继续教育、成人教育、普及教育、社会化培训等多种途径，以及函授教育、电视教育、网络教育、人才评价选拔等多种手段，加快各类信息化人才的培养，增强专业人才的素质和水平。要长期坚持不懈地在广大人民群众中普及信息化知识和提高信息化意识，加强政府机构和企事业单位的信息化职业培训工作，还要重视建立精干的信息化管理队伍的工作。
+            2. 软件和信息技术服务业作为知识和技术密集型产业，其竞争的根本是人才的竞争，其发展在很大程度上取决于人才的素质与结构。经过多年的发展，我国目前已经形成了以普通高等院校、软件学院、职业技术学院、社会培训机构为施教主体的学历教育和职业教育相结合的人才培养体系；以计算机技术与软件专业技术资格（水平）考试为代表的专业技术人员职业资格证书制度和企业专业工程师认证相结合的人才选拔体系。
+            3. 伴随着软件和信息技术服务业的高速发展，软件和信息技术服务人才队伍也逐渐发展壮大。已经形成一支涵盖研发、集成、管理、销售和服务等多个环节、多层次的从业人员队伍。2015年的1—11月，软件和信息技术服务从业人员平均人数552万人（数据来源：工业和信息化部《2015年1-11月软件业经济运行情况》）。
+            4. 信息化人才队伍建设的总体思路是：以能力建设为核心，以高层次人刊、复合型人才的培养、选拔和引进为重点，调整人才结构，全面提高人才综合素质。加快培养支专业水平高、创新能力强的高素质专业技术人才队伍；大力培养一批符合产业结构优化升级要求、技艺精湛的高技能人才，为推动软件和信息技术服务业由大变强提供坚强的智力支持和人才保证。总体目标是：人才总量与行业增长适应，队伍结构进步调整优化，人才效能显著提高，人才的专业性、适用性显著增强，注重基础研发人才的开发和引进。努力培养造就支与我国软件与服务业发展相适应，规模适度、结构合理、索质优良的人才队伍，培养大摄适应新经济、新产业，面向大数据应用、信息安全和互联网+业态的高水平的专业技术人才和高技能人才；形成产业和教育培养密切衔接，产、学、研、用平衡配套的人才培养使用机制和继续教育机制；面向应用，丰富和完善以国家专业技术人员职业资格证书制度为主的人才选拔评价机制;以人为本，进一步完善人才市场服务体系，有利于人才的职业发展和合理流动。
+        6. 信息化政策法规和标准规范
+            1. 信息化政策法规和标准规范用于规范和协调信息化体系各要素之间关系，是国家信息化快速、持续、有序、健康发展的根本保障。
+            2. 为适应国家信息化发展的需要，我国针对知识产权保护、信息安全、互联网应用等方面制定和出台了各种法规及配套的管理条例，形成了较为完善的法规体系，营造了一个公平、合理、有序的竞争环境；针刺软件工程、信息处理、系统开发维护、过程管理等方面形成了完备和成熟的标准规范；在信息系缆开发建设时，我国从遵从有关的国际技术标准，到参与国际技术标准的制订，再到制订发布国际技术标准，我国在全球信息化过程中逐渐取得了较重的话语权。
+3. 信息系统的生命周期
+    1. 知识点
+        1. 系统规划与管理师教程：信息系统的生命周期 - 综合知识 - 信管网 http://www.cnitpm.com/pm1/47760.html
+        2. 信息系统生命周期5阶段生命周期 - 综合知识 - 信管网 https://www.cnitpm.com/pm1/49496.html
+    2. 习题
+        1. 解析：以下关于信息系统生命周期的叙述中，不正确的是（）。b、立项阶段结束的里程碑是集成企业提交的立项 - 试题库 - 信管网 http://www.cnitpm.com/pm1/44908.html
+        2. 解析：信息系统的生命周期可以简化为立项、开发、运维及消亡4个阶段。（）属于开发阶段的工作。 - 试题库 - 信管网 http://www.cnitpm.com/pm1/64907.html
+        3. 解析：信息系统的生命周期可以分为立项、开发、运维及消亡四个阶段。以下对各阶段的叙述中，不正确的是（ - 试题库 - 信管网 https://www.cnitpm.com/pm1/45402.html
+        4. 某快消品连锁企业委托科技公司a开发部署电子商务平台，a公司根据系统设计任务书所确定的范围，确定系统的基本目标和逻辑功能要求，提出新系统的逻辑模型，这属于信息系统生命周期中（）阶段的工作。 - 信管网 https://www.cnitpm.com/st/3869421731.html
+        5. 解析：（）的任务是：根据系统说明书规定的功能要求，考虑实际条件，具体设计实现逻辑模型的技术方案。 - 试题库 - 信管网 https://www.cnitpm.com/pm1/63897.html
+        6. 解析：某公司准备将运行在本地局域网上的CRM系统迁移到集团云平台上并做适当的功能扩充，从信息系统生命周 - 试题库 - 信管网 https://www.cnitpm.com/pm1/49775.html
+    3. 为了便于论述针对信息系统的项目管理，信息系统的生命周期还可以简化为立项（系统规划）、开发（系统分析、系统设计、系统实施）、运维及消亡四个阶段，在开发阶段不仅包括系统分析、系统设计、系统实施，还包括系统验收等工作。如果从项目管理的角度来看，项目的生命周期又划分为启动、计划、执行和收尾4个典型的阶段。
+        1. 立项阶段：即概念阶段或需求阶段，这一阶段根据用户业务发展和经营管理的需要，提出建设信息系统的初步构想；然后对企业信息系统的需求进行深入调研和分析，形成`《需求规格说明书》`并确定立项。 
+        2. 开发阶段：以立项阶段所做的需求分析为基础，进行总体规划。之后，通过系统分析、系统设计、系统实施、系统验收等工作实现并交付系统。 
+        3. 运维阶段：信息系统通过验收，正式移交给用户以后，进入运维阶段。要保障系统正常运行，系统维护是一项必要的工作。系统的运行维护可分为更正性维护、适应性维护、完善性维护、预防性维护等类型。 
+        4. 消亡阶段：信息系统不可避免地会遇到系统更新改造、功能扩展，甚至废弃重建等情况。对此，在信息系统建设的初期就应该注意系统消亡条件和时机，以及由此而花费的成本。
+    4. 5阶段的生命周期
+        1. 系统规划阶段。系统规划阶段的任务是对组织的环境、目标及现行系统的状况进行初步调查，根据组织目标和发展战略，确定信息系统的发展战略，对建设新系统的需求做出分析和预测，同时考虑建设新系统所受的各种约束，研究建设新系统的必要性和可能性。根据需要与可能，给出拟建系统的备选方案。对这些方案进行可行性研究，写出可行性研究报告。可行性研究报告审议通过后，将新系统建设方案及实施计划编写成系统设计任务书。
+        2. 系统分析阶段。系统分析阶段的任务是根据系统设计任务书所确定的范围，对现行系统进行详细调查，描述现行系统的业务流程，指出现行系统的局限性和不足之处，`确定新系统的基本目标和逻辑功能要求`，即提出新系统的`逻辑模型`。系统分析阶段又称为逻辑设计阶段。这个阶段是整个系统建设的关键阶段，也是信息系统建设与一般工程项目的重要区别所在。系统分析阶段的工作成果体现在系统说明书中，这是系统建设的必备文件。它既是给用户看的，也是下一个阶段的工作依据。因此，系统说明书既要通俗，又要准确。用户通过系统说明书可以了解未来系统的功能，判断是不是所要求的系统。系统说明书一旦讨论通过，就是系统设计的依据，也是将来验收系统的依据。
+        3. 系统设计阶段。简单地说，系统分析阶段的任务是回答系统“做什么”的问题，而系统设计阶段要回答的问题是“怎么做”。该阶段的任务是根据系统说明书中规定的功能要求，考虑实际条件，具体设计实现逻辑模型的技术方案，也就是设计新系统的物理模型。这个阶段又称为物理设计阶段，可分为总体设计（概要设计）和详细设计两个子阶段。这个阶段的技术文档是系统设计说明书。
+        4. 系统实施阶段。系统实施阶段是将设计的系统付诸实施的阶段。这一阶段的任务包括计算机等设备的购置、安装和调试、程序的编写和调试、人员培训、数据文件转换、系统调试与转换等。这个阶段的特点是几个互相联系、互相制约的任务同时展开，必须精心安排、合理组织。系统实施是按实施计划分阶段完成的，每个阶段应写出实施进展报告。系统测试之后写出系统测试分析报告。
+        5. 系统运行和维护阶段。系统投入运行后，需要经常进行维护和评价，记录系统运行的情况，根据一定的规则对系统进行必要的修改，评价系统的工作质量和经济效益。
+4. 信息化发展与应用的新特点。信息技木和产业是我国进行信息化建设的基础。随着我国国民经济快速持续的发展和信息化进程的不断加快，各行各业对信息基础设施、信息产品与软件产品、信息技术和信息服务的需求急剧增长，这也为信息产业的发展提供了巨大的市场空间，从而带动我国信息产业的高速发展。我国在“十三五”规划纲要中，将培育人工智能、移动智能终端、第五代移动通信(5G)、先进传感器等作为新一代信息技术产业创新重点发展，拓展新兴产业发展空间。当前，信息技术发展的总趋势是从典型的技术驱动发展模式向应用驱动与技术驱动相结合的模式转变，信息技术发展趋势和新技术应用主要包括以下几个方面。
+    1. 高速度大容量。速度和容量是紧密联系的，海量信息四处充斥的现状，处理高速、传输和存储要求大容量就成为必然趋势。而电子元器件、集成电路、存储器件的高速化、微型化、廉价化的快速发展，又使信息的种类、规模以更高的速度膨胀，其空间分布也表现为“无处不在”，在时间维度上，信息可以整合到信息系统初建的20世纪80年代。
+    2. 集成化和平台化。以行业应用为基础的，综合领域应用模型（算法）、云计算、大数据分析、海量存储、信息安全、依托移动互联的集成化信息技术的综合应用是目前的发展趋势。信息系统集成化和平台化的特点，使得信息消费更注重良好的用户体验，而不必关心信息技术细节。
+    3. 智能化。随着工业和信息化的深度融合成为我国目前乃至今后相当长的一段时期的产业政策和资金投入的主导方向，以“智能制造”为标签的各种软硬件应用将为各行各业的各类产品带来“换代式”的飞跃甚至是“革命”，成为拉动行业产值的主要方向。
+    4. 虚拟计算。通常所说的虚拟计算，是一种以虚拟化、网络、云计算等技术的融合为核心的一种计算平台、存储平台和应用系统的共享管理技术。虚拟化已成为企业IT部署不可或缺的组成部分。虚拟计算应用于互联网上，是云计算的基础，也是云计算应用的一个主要表现，这已经是当今和未来信息系统架构的主要模式。
+    5. 通信技术。随着数字化技术的发展，通信传输向高速大容量长距离发展，光纤传输的激光波长从1.3微米发展到1.55微米并普遍应用。波分复用技术已经进入成熟应用阶段，光放大器代替光电转换中继器已经实用；相干光通信、光孤子通信已经取得重大进展。4G无线网络和基于无线数据服务的移动互联网已经深入社舍生活的方方面面，极大地影响了人们的工作和生活方式，成为了经济活动中最具发展创新活力的引擎。
+    6. 遥感和传感技术。感测与识别技术的作用是仿真人类感觉器官的功能，扩展信息系统（或信息设备）快速、准确获取信息的途径。传感技术同计算机技术与通信技术一起被称为信息技术的三大支柱。随着信息技术的进步和信息产业的发展，传感与交互控制在工业、交通、医疗、农业、环保等方面的应用将更加广泛和深入。可以说，`传感和识别技术是“物联网”应用的重要基础`，而“物联网”应用目前和未来将遍及国民经济和日常生活的方方面面，成为计算机软件服务行业的应用重点，`也是工业和信息化深度融合的关键技术之一`，是两化融合的重要技术之一。
+    7. 移动智能终端。随着四核甚至八核并行移动处理器、Flash-Rom等核心配件的发展及其在手机上的应用，手机的信息处理能力与传统个人电脑相比已不相上下；移动4G技术、WiFi等无线数据通信方式的全面普及，手机的数据传输速度和能力也越来越高，使得智能手机完全具备了移动智能终端的处理能力。智能手机逐渐成为了人们通信、文档管理、社交、学习、出行、娱乐、医疗保健、金融支付等方面的便捷、高效的工具。智能手机的普及、良好用户体验应用的丰富和网络用卢规模的不断扩大，使得移动互联网产业发展迅猛，而安全与隐私保护是移动互联网面临的重大课题。
+    8. 以人为本。信息技术不再是专家和工程师才能掌握和操纵的高科技，而开始真正地面向普通公众，为人所用。信息表达形式和信息系统与人的交互超越了传统的文字、图像和声音，机器或者设备感知视觉、听觉、触觉、语言、姿态甚至思维等技术或者手段已经在各种信息系统中大量出现，人在使用各类信息系统时可以完全模仿人与真实世界的交互方式，获得非常完美的用户体验。
+    9. 信息安全。在信息化社会中，计算机和网络在军事、政治、金融、工业、商业、人们的生活和工作等方面的应用越来越广泛，社会对计算机和网络的依赖越来越大，如果计算机和网络系统的信息安全受到危害将导致社会的混乱并造成巨大损失。信息安全关系到国家的国防安全、政治安全、经济安全、社会安全，是国家安全的重要组成部分。建设网络强国要向着网络基础设施基本普及、自主创新能力增强、信息经济全面发展、网络安全保障有力的目标不断前进。围绕“建设网络强国”，主要应落实以下任务：要有自己的技术，有过硬的技术；要有丰富全蕊的信息服务，繁荣发展的网络文化；要有良好的信息基础设施，形成实力雄厚的信息经济；要有高素质的网络安全和信息化人才队伍；要积极开展双边、多边的互联网国际交流合作。
+5. 电子政务
+    1. 习题
+        1. 以下关于我国现阶段电子政务建设的叙述中，不正确的是（）a、我国电子政务建设一直坚 - 信管网 http://www.cnitpm.com/st/2837226024.html
+        2. 电子政务是我国国民经和社会信息化的重要组成部分。（）一般不属于电子政务内容。a、 - 信管网 http://www.cnitpm.com/st/326137397.html
+    2. 电子政务建设的主要任务具体分为八个方面：
+        1. 建设和整合统一的电子政务网络 
+        2. 建设和完善重点业务系统 
+        3. 规划和开发重要政务信息资源 
+        4. 积极推进公共服务
+        5. 基本建立电子政务网络与信息安全保障体系 
+        6. 完善电子政务标准化体系 
+        7. 加强公务员信息化培训和考核 
+        8. 加快推进电子政务法制建设
+    3. 电子政务是指政府机构在其管理和服务职能中运用现代信息技术，实现政府组织结构和工作流程的重组优化，超越时间、空间和部门分隔的制约，建成一个精简、高效、廉洁、公平的政府运作模式。电子政务模型可简单概括为两方面：政府部门内部利用先进的网络信息技术实现办公自动化、管理信息化、决策科学化；政府部门与社会各界利用网络信息平台充分进行信息共享与服务、加强群众监督、提高办事效率及促进政务公开，等等。政府大院为保证办公环境的门禁系统不属于电子政务
+6. 软件集成技术
+    1. 在企业信息化建设的过程中，由于缺乏统一规划和总体布局，往往形成多个信息孤岛。信息孤岛使数据的一致性无法得到保证，信息无法共享和反馈，需要重复多次的采集和输入。信息孤岛是企业信息化一个重要的负面因素，其主要原因既有技术因素也有管理因素，还有业务流程和标准方面的因素。如何将众多的信息孤岛联系起来，以便让不同的系统乏间交互信息，是当前很多企业都面临的一个问题。
+    2. 此时集成技术应运而生，集成包括软硬件以及网络的集成，在本节我们主要介绍软件层次的集成技术——企业应用集成( Enterprise Application Integration，EAI)。
+    3. 企业应用集成技术可以消除信息孤岛，它将多个企业信息系统连接起来，实现无缝集成，使它们就像一个整体一样。EAI是伴随着企业信息系统的发展而产生和演变的，企业的价值取向是推动EAI技术发展的原动力，而EAI的实现反过来也驱动企业竞争优势的提升。
+    4. EAI所连接的应用包括各种电子商务系统、ERP、CRM、SCM、OA、数据库系统和数据仓库等。从单个企业的角度来说，EAI可以包括表示集成、数据集成、控制集成和业务流程集成等多个层次和方面。当然，也可以在多个企业之间进行应用集成。
+        1. 表示集成。表示集成也称为界面集成，这是比较原始和最浅层次的集成，但又是常用的集成。这种方法将用户界面作为公共的集成点，`把原有零散的系统界面集中在一个新的界面中`。表示集成是`黑盒集成`，无须了解程序与数据库的内部构造。常用的集成技术主要有屏幕截取和输入模拟技术。表示集成的实现是很简单的，也是很不彻底的，只是做了一层“外装修”，而额外多出来的集成界面也将可能成为系统的性能瓶颈。表示集成通常应用于默下几种情况。
+            1. 在现有的基于终端的应用系统上配置基于PC（Personal Computer，个人计算机）的用户界面。
+            2. 为用户提供一个看上去统一，但是由多个系统组成的应用系统。
+            3. 当只有可能在显示界面上实现集成时。
+        2. 数据集成。为了完成控制集成和业务流程集成，必须首先解决数据和数据库的集成问题。在集成之前，必须首先对数据进行标识并编成目录，另外还要确定元数据模型，保证数据在数据库系统中分布和共享。因此，数据集成是`白盒集成`。有很多不同的中间件工具可以用于数据集成。例如，批量文件传输，即以特定的或是预定的方式在原有系统和新开发的应用系统之间进行文件传输；用于访问不同类型数据库系统的ODBC（Open DataBase Connectivity，开放数据库互连）标准接口：向分布式数据库提供连接的数据库访问中间件技术等。相对而言，数据集成比表示集成要更加灵活。但是，当业务逻辑经常发生变化时，数据集成就会面临困难。通常在以下情况下，将会使用数据集成：
+            1. 需要对多种信息源产生的数据进行综合分析和决策。
+            2. 要处理一些多个应用喜人需要访问的公用信息库。
+            3. 当需要从某数据源获得数据来更新另一个数据源时，特别是它们之间的数据格式不相同时。
+        3. 控制集成。控制集成也称为功能集成或应用集成，是在`业务逻辑层上对应用系统进行集成的`。控制集成的集成点存于程序代码中，集成处可能只需简单使用公开的API (ApplicationProgramming Interface，应用程序编程接口)就可以访问，当然也可能需要添加附加的代码来实现。控制集成是`黑盒集成`。实现控制篥成时，可以借助于远程过程调用或远程方法调用、面向消息的中间件、分布式对象技术和事务处理监控器来实现。控制集成与表示集成、数据集成相比，灵活性更高。表示集成和数据集成适用的环境下，都适用于控制集成。但是，由于控制集成是在业务逻辑层进行的，其复杂度更高一些。而且，很多系统的业务逻辑部分并没有提供API，这样，集成难度就会更大。
+7. 商业智能
+    1. 知识点
+        1. 商业智能相关知识及历年真题 - 综合知识 - 信管网 http://www.cnitpm.com/pm1/45002.html
+        2. 商业智能系统应具有的主要功能 - 综合知识 - 信管网 http://www.cnitpm.com/pm/9053.html
+        3. 商业智能的三个层次：`数据报表、多维数据分析和数据挖掘`。 - 综合知识 - 信管网 http://www.cnitpm.com/pm1/45005.html
+        4. OLAP（联机分析处理） - 综合知识 - 信管网 http://www.cnitpm.com/pm1/49872.html
+    2. 习题
+        1. 以下（ ）不属于商业智能系统应具有的主要功能。 - 信管网 https://www.cnitpm.com/st/35730.html
+        2. 解析：商业智能系统应具有的主要功能不包括（）。 - 试题库 - 信管网 http://www.cnitpm.com/pm1/63898.html
+        3. 解析：（ ）是一种软件技术，在数据仓库中有广泛的应用，通过访问大量的数据实现数据处理分析要求，实现方 - 试题库 - 信管网 http://www.cnitpm.com/pm1/51310.html
+        4. 解析：关于数据库和数据仓库技术的描述，不正确的是：（）。 A、与数据仓库相比，数据库的数据源相对单一 B - 试题库 - 信管网 https://www.cnitpm.com/pm1/58187.html
+    3. 数据库与数据仓库技术 
+        1. 传统的数据库技术以单一的数据源即数据库为中心，进行事务处理、批处理、决策分析等各种数据处理工作，主要有操作型处理和分析型处理两类。操作型处理也称事务处理，指的是对联机数据库的日常操作，通常是对数据库中记录的查询和修改，主要为企业的特定应用服务，强调处理的响应时间、数据的安全性和完整性等；分析型处理则用于管理人员的决策分析，经常要访问大量的历史数据。传统数据库系统主要强调的是优化企业的日常事务处理工作，难以实现对数据分析处理要求，无法满足数据处理多样化的要求。操作型处理和分析型处理的分离是必然和必要的。 
+        2. 数据仓库（Data Warehouse）是一个面向主题的（ Subject Oriented）、集成的、相对稳定的、反映历史变化的数据集合，用于支持管理决策。数据仓库是对多个异构数据源（包括历史数据）的有效集成，集成后按主题重组，且`存放在数据仓库中的数据一般不再修改`。 
+        3. 企业数据仓库的建设，是以现有企业业务系统和大量业务数据的积累为基础的。数据仓库不是静态的概念，只有将信息及时地提供给需要这些信息的使用者，供其做出改善自身业务经营的决策，信息才能发挥作用，也才有意义。将信息加以整理归纳和重组，并及时地提供给相应的管理决策人员，是数据仓库的根本任务。数据仓库系统的结构通常包含 4个层次，如图 3-9所示。 
+        4. 随着云时代的来临，大数据（ Big Data）吸引了越来越多的关注。业界将其特点归纳为 5个“V”——Volume（数据量大）、Variety（数据类型繁多）、Velocity（处理速度快）、Value（价值密度低）、Veracity（真实性高）。大数据的意义不在于掌握庞大的数据信息，而在于对这些数据进行专业化处理，实现数据的“增值”（详见本书1.6.1节）。大数据分析相比于传统的数据仓库应用，具有数据量大、查询分析复杂等特点。在技术上，大数据必须依托云计算的分布式处理、分布式数据库和云存储、虚拟化技术等。 
