--- a/manage/02.信息系统项目管理师/03.信息系统开发方法和信息系统规划.md
+++ b/manage/02.信息系统项目管理师/03.信息系统开发方法和信息系统规划.md
@@ -3,7 +3,7 @@
         1. 普遍性。电子商务作为一种新型的交易方式，将生产企业、流通企业、消费者以及金融企业和监管者集成到了数字化的网络经济中。
         2. 便利性。参与电子商务的各方不受地域、环境、交易时间的限制，能以非常简洁的力式完成传统上较为繁杂的商务活动。
         3. 整体性。电子商务能够规范事务处理的工作流程，将人工操作和电子信息处理集成为一个不可分割的整体，保证交易过程的规范和严谨。
-        4. 安全性。与传统的商务活动不同，电子商务必须采取诸如加密、身份队证、防入侵、数字签名、防病毒等技术手段确保交易活动的安全性。
+        4. 安全性。与传统的商务活动不同，电子商务必须采取诸如`加密、身份队证、防入侵、数字签名、防病毒`等技术手段确保交易活动的安全性。
         5. 协调性。商务活动本身是一种磋商、协调的过程，客户与企业之间、企业与企业之间、客户与金融服务部门之间、企业与金融服务部门之间、企业与配送部门之间等需要有序地协作，共同配合来完成交易。
 2. 信息系统生命周期5阶段生命周期
     1. 为了便于论述针对信息系统的项目管理，信息系统的生命周期还可以简化为立项（系统规划）、开发（系统分析、系统谩计、系统实施）、运维及消亡四个阶段，在开发阶段不仅包括系统分析、系统设计、系统实施，还包括系统验收等工作。如果从项目管理的角度来看，项目的生命周期又划分为启动、计划、执行和收尾4个典型的阶段。
