--- a/manage/02.信息系统项目管理师/05.新一代信息技术及应用.md
+++ b/manage/02.信息系统项目管理师/05.新一代信息技术及应用.md
@@ -1,16 +1,24 @@
 1. 智慧化概念
-    1. 智能一般具有这样一些特点：
+    1. 习题
+        1. 智能具有感知、记忆、自适应等特点，能够存储感知到的外部信息及由思维产生的知识，同时能够利用己有的知识对信息进行分析、计算、比较、判断、联想和决策属于智能的（）能力。 - 信管网 http://www.cnitpm.com/st/386937342.html
+    2. 智能一般具有这样一些特点：
         1. 一是具有感知能力，即具有能够感知外部世界、获取外部信息的能力，这是产生智能活动的前提条件和必要条件；
         2. 二是具有`记忆和思维能力`，即能够存储感知到的外部信息及由思维产生的知识，同时能够利用已有的知识对信息进行分析、计算、比较、判断、联想、决策；
         3. 三是具有学习能力和自适应能力，即通过与环境的相互作用，不断学习积累知识，使自己能够适应环境变化；
         4. 四是具有行为决策能力，即对外界的刺激作出反应，形成决策并传达相应的信息。
 2. 云计算
+    1. 习题
+        1. 在云计算服务类型中,（）向用户提虚拟数据的操作系统，数据库管理系统，web应用系 - 软题库 https://www.ruantiku.com/shiti/326321914.html
     1. 云计算服务的类型，按照云计算服务提供的资源层次，可以分为IaaS、PaaS相SaaS三种服务类型。
         1. IaaS（基础设施即服务），向用户提供计算机能力、存储空间等基础设施方面的服务。这种服务模式需要较大的基础设施投入和长期运营管理经验，但IaaS服务单纯出租资源，盈利能力有限。
-        2. PaaS（平台即服务），`向用户提供虚拟的操作系统、数据库管理系统、Web应用等平台化的服务`。PaaS服务的重点不在于直接的经济效益，而更注重构建和形成紧密的产业生态。
+        2. PaaS（平台即服务），`向用户提供虚拟的操作系统`、数据库管理系统、Web应用等平台化的服务。PaaS服务的重点不在于直接的经济效益，而更注重构建和形成紧密的产业生态。
         3. SaaS（软件即服务），向用户提供应用软件（如CRM、办公软件等）、组件、工作流等虚拟化软件的服务，SaaS一般采用Web技术和SOA架构，通过Internet向用户提供多租户、可定制的应用能力，大大缩短了软件产业的渠道链条，减少了软件升级、定制和运行维护的复杂程度，并使软件提供商从软件产品的生产者转变为应用服务的运营者。
     2. 云计算（cloud computing）是基于互联网的相关服务的增加、使用和交付模式，通常涉及通过互联网来提供动态易扩展且经常是`虚拟化`的资源。 
 3. 互联网
+    1. 习题
+        1. 解析：相对于Web1.0来说，Web2.0具有多种优势，（）不属于Web2.0的优势。 A、页面简洁、风格流畅 B、个性化 - 试题库 - 信管网 http://www.cnitpm.com/pm1/58231.html
+        2. 技术部分知识测验题 - 软题库 http://www.ruantiku.com/xg/exam/ExamMAM.aspx?sid=1157590
+        3. 解析：以下关于移动互联网的描述，不正确的是：（）。 A、移动互联网使得用户可以在移动状态下接入和使用互 - 试题库 - 信管网 http://www.cnitpm.com/pm1/50658.html
     1. 互联网+
         1. 2015年7月1日，国务院印发了《关于积极推进“互联网+”行动的指导意见》。
             1. “互联网+”行动的目标是，到2018年，互联网与社会经济各领域的融合发展进一步深化，基于互联网的新业态成为新的经济增长动力，互联网支撑大众创业、万众创新的作用进一步增强，互联网成为提供公共服务的重要手段，网络经济与实体经济协同互动的发展格局基本形成。
@@ -18,22 +26,28 @@
         2. 互联网+”就是“互联网+各个传统行业”，但这并不是简单的两者相加，而是利用信息通信技术以及互联网平台，让互联网与传统行业进行深度融合，创造新的发展生态。
     2. 移动互联网
         1. 移动互联网的核心是互联网，因此一般认为`移动互联网是桌面互联网的补充和延伸`，应用和内容仍是移动互联网的根本。
+        2. Web 2.0。 Web 2.0严格来说不是一种技术，而是提倡`众人参与的互联网思维模式`，是相对于 Web 1.0的新的时代。指的是一个利用 Web的平台，由用户主导而生成的内容互联网产品模式，为了区别传统由网站雇员主导生成的内容而定义为第二代互联网，即 Web 2.0，是一个新的时代
 4. 信息物理系统
     1. 信息物理系统CPS
         1. 信息物理系统（CPS,Cyber-Physical Systems）是一个综合计算、网络和物理环境的多维复杂系统，通过3C（Computer、Communication、Control）技术的有机融合与深度协作，实现大型工程系统的实时感知、动态控制和信息服务。CPS实现计算、通信与物理系统的一体化设计，可使系统更加可靠、高效、实时协同，具有重要而广泛的应用前景。
         2. 智能制造是制造技术发展的必然趋势，从理论上讲，CPS是智能制造的核心
 5. 商业智能
+    1. 习题
+        1. 商业智能将企业中现有的数据转化为知识，帮助企业做出明智的业务经营决策，包括数据预处理、建立数据模型、数据分析及数据展现4个阶段：其主要应用的3个关键技术是（）。 - 信管网 http://www.cnitpm.com/st/356524764.html
+        2. 解析：（ ）是一种软件技术，在数据仓库中有广泛的应用，通过访问大量的数据实现数据处理分析要求，实现方 - 试题库 - 信管网 http://www.cnitpm.com/pm1/51310.html
     1. 商业智能不是什么新技术，它只是`数据仓库、OLAP和数据挖掘`等技术的综合运用。
     2. 数据分析和数据挖掘系统的目的是带给我们更多的决策支持价值，并不是取代数据报表。`报表系统依然有其不呵取代的优势，并且将会长期与数据分析、挖掘系统一起并存下去`。
-    3. 商业智能实现的三个层次：数据报表、多维数据分析和数据挖掘：
+    3. 商业智能实现的三个层次：`数据报表、多维数据分析和数据挖掘`：
     4. 商业智能系统应具有的主要功能：
         1. 数据仓库：高效的数据存储和访问方式。提供结构化和非结构化的数据存储，容最大，运行稳定，维护成本低，支持元数据管理，支持多种结构，例如中心式数据仓库和分布式数据仓库等。存储介质能够支持近线式和二=级存储器，能够很好地支持容灾和备份方案。
         2. 数据ETL:数据ETL支持多平台、多数据存储格式（多数据源、多格式数据文件、多维数据库等）的数据组织，要求能自动地根据描述或者规则进行数据查找和理解。减少海量、复杂数据与全局决策数据之间的差距。帮助形成支撑决策要求的参考内容。
         3. 数据统计输出（报表）：报表能快速地完成数据统计的设计和展示，其中包括了统计数据表样式和统计图展示，可以很好地输出给其他应用程序或者以Html形式表现和保存。对于自定义设计部分要提供简单易用的设计方案，支持灵活的数据填报和针对非技术人员设计的解决方案。能自动地完成输出内容的发布。
         4. 分析功能：司以通过业务规则形成分析内容，并且展示样式丰富，具有一定的交互要求，例如预警或者趋势分析等。要支持多维度的OLAP，实现维度变化、旋转、数据切片和数据钻取等，以帮助做出正确的判断和决策。
+    5. OLAP是数据仓库系统的一个主要应用，支持复杂的分析操作，侧重决策支持，并且提供直观易懂的查询结果。OLAP提供多维数据管理环境，其典型的应用是对商业问题的建模与商业数据分析。OLAP也被称为多维分析。OLTP属于传统的关系型数据库的一个主要应用，主要用于基本的、日常的事务处理，例如银行交易；
 6. 区块链
     1. 知识点
         1. 区块链及历年真题考点：http://www.cnitpm.com/pm1/49535.html
+        2. 解析：区块链2.0技术架构自上而下分为数据层、网络层、共识层、激励层、智能合约层，数据传播机制、数据验 - 试题库 - 信管网 http://www.cnitpm.com/pm1/55736.html
     2. 区块链是`比特币`的底层技术和基础架构。本质上是一个去中心化的数据库，同时作为比特币的底层技术。区块链是一串使用密码学方法相关联产生的数据块，每一个数据块中包含了一次比特币网络交易的信息，用于验证其信息的有效性（防伪）和生成下一个区块。
     3. 区块链是`分布式数据存储、点对点传输、共识机制、加密算法`等计算机技术的新型应用模式。所谓共识机制是区块链系统中实现不同节点之间建立信任、获取权益的数学算法。
     4. 基础架构，区块链系统由数据层、网络层、共识层、激励层、合约层和应用层组成
@@ -45,6 +59,9 @@
 7. 人工智能
     1. 人工智能是计算机科学的一个分支，它企图了解智能的实质，并生产出一种新的能以人类智能相似的方式做出反应的智能机器，该领域的研究包括机器人、语言识别、图像识别、自然语言处理和专家系统等。
 8. 大数据
+    1. 习题
+        1. 解析：在大数据关键技术中，Hadoop的分布式文件系统HDFS属于大数据（）。 A、存储技术 B、分析技术 C、并行 - 试题库 - 信管网 http://www.cnitpm.com/pm1/58228.html
+        2. 解析：在将数据源经过分析挖掘到最终获得价值的大数据处理过程中，MapReduce是在（ ）阶段应用分布式并行 - 试题库 - 信管网 https://www.cnitpm.com/pm1/51344.html
     1. 大数据(Big Data)是指“无法用现有的软件工具提取、存储、搜索、共享、分析和处理的海量的、复杂的数据集合。”业界通常用4个V(即Volume、Variety、Value、Velocity)来概括大数据的特征。 
         1. 一是数据体量巨大(Volume)。截至目前，人类生产的所有印刷材料的数据量是200PB(1PB=210TB)，而历史上全人类说过的所有的话的数据量大约是5EB(1EB=210PB)。当前，典型个人计算机硬盘的容量为TB量级，而一些大企业的数据量已经接近EB量级。 
         2. 二是数据类型繁多(Variety)。这种类型的多样性也让数据被分为结构化数据和非结构化数据。相对于以往便于存储的以文本为主的结构化数据，非结构化数据越来越多，包括网络日志、音频、视频、图片、地理位置信息等，这些多类型的数据对数据的处理能力提出了更高要求。 
@@ -58,16 +75,21 @@
     4. 大数据所涉及的技术很多，主要包括数据采集、数据存储、数据管理、数据分析与挖掘四个环节。
         1. 在数据采集阶段主要使用的技术是数据抽取工具 ETL。
         2. 在数据存储环节主要有结构化数据、非结构化数据和半结构化数据的存储与访问。结构化数据一般存放在关系数据库，通过数据查询语言（ SQL）来访问；非结构化（如图片、视频、 doc文件等）和半结构化数据一般通过分布式文件系统的 NoSQL（Not Only SQL）进行存储，比较典型的 NoSQL有 Google的 Bigtable、Amazon的 Dynamo和 Apache的 Hbase。
-        3. 大数据管理主要使用了分布式并行处理技术，比较常用的有 `MapReduce`，编程人员借助 MapReduce可以在不会分布式并行编程的情况下，将自己的程序运行在分布式系统上。
+        3. `大数据管理`主要使用了分布式并行处理技术，比较常用的有 `MapReduce`，编程人员借助 MapReduce可以在不会分布式并行编程的情况下，将自己的程序运行在分布式系统上。
         4. 数据分析与挖掘是根据业务需求对大数据进行关联、聚类、分类等钻取和分析，并利用图形、表格加以展示，与 ETL一样，数据分析和挖掘是以前数据仓库的范畴，只是在大数据中得以更好的利用。
 9. 物联网
+    1. 习题
+        1. 解析：在物联网的架构中，3G、4G属于（）技术。 A、网络层 B、感知层 C、物理层 D、应用层 信管网解析： 系 - 试题库 - 信管网 http://www.cnitpm.com/pm1/58230.html
+        2. 以下对物联网的描述不正确的是：（ ） - 信管网 http://www.cnitpm.com/st/35747.html
     1. 物联网从架构上面可以分为感知层、网络层和应用层
         1. 感知层：`负责信息采集和物物之间的信息传输`，信息采集的技术包括传感器、条码和二维码、 RFID射频技术、音视频等多媒体信息，信息传输包括远近距离数据传输技术、自组织组网技术、协同信息处理技术、信息采集中间件技术等传感器网络。感知层是实现物联网全面感知的核心能力，是物联网中包括关键技术、标准化方面、产业化方面亟待突破的部分，关键在于具备更精确、更全面的感知能力，并解决低功耗、小型化和低成本的问题。
-        2. 网络层：`是利用无线和有线网络对采集的数据进行编码、认证和传输`，广泛覆盖的移动通信网络是实现物联网的基础设施，是物联网三层中标准化程度昀高、产业化能力昀强、昀成熟的部分，关键在于为物联网应用特征进行优化和改进，形成协同感知的网络。
+        2. 网络层：`是利用无线和有线网络对采集的数据进行编码、认证和传输`，广泛覆盖的移动通信网络是实现物联网的基础设施，是物联网三层中标准化程度昀高、产业化能力昀强、昀成熟的部分，关键在于为物联网应用特征进行优化和改进，形成协同感知的网络。`3g、4g属于网络层`
         3. 应用层：`提供丰富的基于物联网的应用，是物联网发展的根本目标`，将物联网技术与行业信息化需求相结合，实现广泛智能化应用的解决方案集，关键在于行业融合、信息资源的开发利用、低成本高质量的解决方案、信息安全的保障以及有效的商业模式的开发。
     2. 物联网是通过`射频识别（RFID）、红外感应器、全球定位系统（GPS）、激光扫描器`等信息传感设备，按约定的协议，把任何物品与互联网相连接，进行信息交换和通信，以实现对物品的智能化识别、定位、跟踪、监控和管理的一种网络。
     3. `物联网不是一种物理上独立存在的完整网络`，而是架构在现有互联网或下一代公网或专网基础上的联网应用和通信能力，是具有整合感知识别、传输互联和计算处理等能力的智能型应用。
 10. 智慧城市
+    1. 习题
+        1. 解析：智能挖掘分析是智慧城市建设参考模型（ ）中的关键技术。 A、智慧应用层 B、计算与存储层 C、数据及 - 试题库 - 信管网 http://www.cnitpm.com/pm1/49647.html
     1. 智慧城市建设主要包括以下几个部分：
         1. 首先，通过传感器或信息采集设备全方位地获取城市系统数据；
         2. 其次，通过网络将城市数据关联、融合、处理、分析为信息；
@@ -79,7 +101,7 @@
         2. 通信网络层：广泛互联，以互联网、电信网、广播电视网以及传输介质为光纤的城市专用网作为骨干传输网络，以覆盖全城的无线p络（如WiFi）、移动4G为主要接入网，组成网络通信基础设施。 
         图1-25是位于北京延庆的GPS卫星信号接收基站，通过计算GPs信号的延迟，可以监测地壳形变和大气水汽的变化，精度可以到毫米级，数据通过网络实时传送到管理中心，综合其他信息，对城市天气预报和城市防震减灾有辅助决策作用。 
         3. 计算与存储层：包括软件资源、计算资源和存储资源，为智慧城市提供数据存储和计算，保障上层对于数据汇聚的相关需求。 
-        4. 数据及服务支撑层：利用SOA（面向服务的体系架构）、云计算、大数据等技术，通过数据和服务的融合，支撑承载智慧应用层中的相关应用，提供应用所需的各种服务和共享资源。关键技术主要有：`SOA、海量数据汇聚与存储、数据融合与处理、智能挖掘分析、协同处理`。
+        4. `数据及服务支撑层`：利用SOA（面向服务的体系架构）、云计算、大数据等技术，通过数据和服务的融合，支撑承载智慧应用层中的相关应用，提供应用所需的各种服务和共享资源。关键技术主要有：`SOA、海量数据汇聚与存储、数据融合与处理、智能挖掘分析、协同处理`。
         5. 智慧应用层：各种基于行业或领域的智慧应用及应用整合，如智慧交通、智慧家政、智慧剩区、智慧社区、智慧政务、智慧旅游、智慧环保等，为社会公众、企业、城市管理者等提供整体的信息化应用和服务。 
     4. 智慧城市支撑体系 
         1. 安全保障体系：为智慧城市建设构建统一的安全平台，实现统一入口、统一认证、统一授权、日志记录服务。 
