--- a/manage/02.信息系统项目管理师/06.软件工程.md
+++ b/manage/02.信息系统项目管理师/06.软件工程.md
@@ -29,43 +29,87 @@
             2. 系统可实现对多字符集的支持，包括GBK、BIG5和UTF-8等
         4. 属性：在软件的需求之中有若干个属性如可移植性、正确性、可维护性及安全性等。 
         5. 外部接口需求：包括用户接口、硬件接口、软件接口、通信接口。 
-        6. 其他需求：根据软件和用户组织的特性等某些需求放在数据库、用户要求的常规的和特殊的操作、场合适应性需求中描述。 
-3. 过程能力成熟度模型Capability Maturity Model CMM
-    1. 软件能力成熟模型CMM（Capability Maturity Model for Software）的五个成熟级别
-        1. 第一级：初始级(Initial)；无序，随意。初始级的软件过程是无序的，项目的执行是随意甚至是混乱的。工作方式处于救火状态，不断的应对突如其来的危机；
-        2. 第二级：可重复级(Repeatable)；基本的项目管理管理。建立了基本的项目管理过程来跟踪费用，进度和功能特性，制定了必要的过程纪律，能重复早先类似的应用项目取得的成功。
-        3. 第三级：已定义级(Defined)；`标准化，文档化`。已经将软件管理核工程两方面的过程文档化，标准化，并综合成组织的标准软件过程，所有项目均使用该标准开发维护软件。
-        4. 第四级：已管理级(Managed)；可预测。收集对软件过程和产品质量的详细度量，对软禁啊过程和产品都有定量的理解和控制。
-        5. 第五级：优化级(Optimizing)。优化。过程的量化反馈和先进的新思想，新技术促使过程不断改进。
-    2. CMM的第二级为可重复级，它包括了6个关键域Key Process Areas, KPA
-        1. 需求管理
-            1. `需求管理的主要目标是为软件需求建立一个基线`，提供给软件工程和管理使用；软件计划、产品和活动与软件需求保存一致
-        2. 软件项目计划
-        3. 软件项目跟踪和监督
-        4. 软件分包合同管理
-        5. 软件质量保证
-        6. 软件配置管理
-    3. 使用连续式表示法便你能够达成“`能力等级`”。使用阶段式表示法使你能够达成“`成熟度级别`”。
+        6. 其他需求：根据软件和用户组织的特性等某些需求放在数据库、用户要求的常规的和特殊的操作、场合适应性需求中描述。
+3. 软件工程的过程管理
+    1. 习题
+        1. 办公软件开发公司a非常重视软件过程管理，按照cmmi（能力成熟度模型）逐步进行过程改进，刚刚实现了组织级过程性能、定量项目管理，按照cmmi（能力成熟度模型），a公司达到了（）级别。 - 软题库 https://www.ruantiku.com/shiti/3869924904.html
+    2. 初始级CMMI1放上去，已管理级就是CMMI2，已定义级就是CMMI3，`量化管理级就是CMMI4`，优化管理级就是CMMI5 
+    3. 在无规则和混乱的管理条件下，先进的软件开发技术和工具并不能发挥应有的作用。于是，人们认识到，改进软件过程的管理是解决上述难题的突破口。但是，各个软件组织的过程成熟度有着较大的差别。为了做出客观、公正的比较，就需要建立一种衡量的标准。使用此标准一方面可以评价软件开发方的质量保证能力，在软件项目评标活动中选择开发方；另一方面，该标准也必然成为软件组织加强质量管理和提高软件产品质量的依据。
+    4. 软件过程是软件生命周期中的一系列相关活动，即用于开发和维护软件及相关产品的一系列活动。软件产品酌质量取决于软件过程，具有良好软件过程的组织能够开发出高质量的软件产品。在软件过程管理方面，最著名的是能力成熟度模型集成（CapabilityMaturity Model Integration，CMMI），它融合了多种模型，形成了组织范围内过程改进的单一集成模型，其主要目的是消除不同模型之间的不一致和重复，降低基于模型进行改进的成本。CMMI继承了CMM的阶段表示法和EIA/IS731的连续式表示法。这两种表示方法各有优缺点，均采用统一的24个过程域，它们在逻辑上是等价的，对同一个组织采用两种模型分别进行CMMI评估，得到的结论应该是相同的。
+        1. 阶段式模型。阶段式模型基本沿袭CMM模型框架，仍保持4个成熟等级，但关键过程域做了一些调整和扩充，当组织通过了某一等级过程域中的全部过程，即意味着该组织的成熟度达到了这一等级。利用阶段式模型对组织进行成熟度度量，概念清晰、易于理解、便于操作。
+        2. 连续式模型。与阶段式模型相比，连续式模型没有与组织成熟度相关的几个阶段。连续式模型将24个过程域按照功能划分为过程管理、项目管理、工程和支持四个过程组。
+    5. 过程能力成熟度模型Capability Maturity Model CMMi
+        1. 软件能力成熟模型CMM（Capability Maturity Model for Software）的五个成熟级别
+            1. 第一级：初始级(Initial)；无序，随意。初始级的软件过程是无序的，项目的执行是随意甚至是混乱的。工作方式处于救火状态，不断的应对突如其来的危机；
+            2. 第二级：可重复级(Repeatable)；基本的项目管理管理。建立了基本的项目管理过程来跟踪费用，进度和功能特性，制定了必要的过程纪律，能重复早先类似的应用项目取得的成功。
+            3. 第三级：已定义级(Defined)；`标准化，文档化`。已经将软件管理核工程两方面的过程文档化，标准化，并综合成组织的标准软件过程，所有项目均使用该标准开发维护软件。
+            4. 第四级：已管理级(Managed)；可预测。收集对软件过程和产品质量的详细度量，对软禁啊过程和产品都有定量的理解和控制。
+            5. 第五级：优化级(Optimizing)。优化。过程的量化反馈和先进的新思想，新技术促使过程不断改进。
+        2. CMM的第二级为可重复级，它包括了6个关键域Key Process Areas, KPA
+            1. 需求管理
+                1. `需求管理的主要目标是为软件需求建立一个基线`，提供给软件工程和管理使用；软件计划、产品和活动与软件需求保存一致
+            2. 软件项目计划
+            3. 软件项目跟踪和监督
+            4. 软件分包合同管理
+            5. 软件质量保证
+            6. 软件配置管理
+        3. 使用连续式表示法便你能够达成“`能力等级`”。使用阶段式表示法使你能够达成“`成熟度级别`”。
 4. 面向对象
-    1. 软件复用是指将已有的软件及其有效成分用于构造新的软件或系统。`组件技术是软件复用实现的关键`。
-    2. 模式是一条由三部分组成的规则，它表示了一个特定的环境，一个问题和一个解决方案之间的关系。
-    3. 接口是对操作规范的说明。接口只说明了操作应该做什么（WHAT），但`没有定义操作如何做（HOW）`。接口在面向对象分析和设计过程中起到了至关重要的桥梁作用，系统分析员通常先把有待实现的功能封装并定义成接口，而后期程序员依据此接口进行编码实现。
-    4. 继承可分为单继承与多继承。其中JAVA是单继承的语言.
-    5. `对象可以按其属性来归类`，借助类的层次结构，子类可以通过继承机制获得其父类的特性
-    6. 面向对象的基本概念包括对象、类、抽象、封装、继承、多态、接口、消息、组件、复用和模式等。
+    1. 习题
+        1. 解析：关于对象、类、继承、多态的描述，不正确的是：（）。 A、对象包含对象表示、对象状态和对象行为三个 - 试题库 - 信管网 http://www.cnitpm.com/pm1/58185.html
+        2. 解析：在面向对象的基本概念中，（）体现对象间的交互，通过它向目标对象发送操作请求。 A、继承 B、多态 C - 试题库 - 信管网 http://www.cnitpm.com/pm1/57185.html
+        3. 解析：面向对象软件开发方法的主要优点包括（）。 ①符合人类思维习惯 ②普适于各类信息系统的开发 ③构造 - 试题库 - 信管网 http://www.cnitpm.com/pm1/50662.html
+    2. 软件复用是指将已有的软件及其有效成分用于构造新的软件或系统。`组件技术是软件复用实现的关键`。
+    3. 模式是一条由三部分组成的规则，它表示了一个特定的环境，一个问题和一个解决方案之间的关系。
+    4. 接口是对操作规范的说明。接口只说明了操作应该做什么（WHAT），但`没有定义操作如何做（HOW）`。接口在面向对象分析和设计过程中起到了至关重要的桥梁作用，系统分析员通常先把有待实现的功能封装并定义成接口，而后期程序员依据此接口进行编码实现。
+    5. 继承可分为单继承与多继承。其中JAVA是单继承的语言.
+    6. `对象可以按其属性来归类`，借助类的层次结构，子类可以通过继承机制获得其父类的特性
+    7. 面向对象的基本概念包括对象、类、抽象、封装、继承、多态、接口、消息、组件、复用和模式等。
         1. 对象：由数据及其操作所构成的封装体，是系统中用来描述客观事物的一个模块，是构成系统的基本单位。用计算机语言来描述，对象是由一组属性和对这组属性进行的操作构成的。对象包含3个基本要素，分别是`对象标识、对象状态和对象行为`。例如，对于姓名（标识）为joe的教师而言，其包含性别、年龄、职位等个人状态信息，同时还具有授课等行为特征，joe就是封装后的一个典型对象。
         2. 类：现实世界中实体的形式化描述，类将该实体的属性（数据）和操作（函数）封装在一起。类和对象的关系可理解为，对象是类的实例，类是对象的模板。如果将对象比作房子，那么类就是房子的设计图纸。
         3. 抽象：通过特定的实例抽取共同特征以后形成概念的过程。抽象是一种单一化的描述，强调给出与应用相关的特性，抛弃不相关的特性。对象是现实世界中某个实体的抽象，类是一组对象的抽象。
         4. 封装：`将相关的概念组成一个单元模块，并通过一个名称来引用它`。面向对象封装是将数据和基于数据的操作封装成一个整体对象，对数据的访问或修改只能通过对象对外提供的接口进行。
         5. 继承：表示类之间的层次关系（父类与子类），这种关系使得某类对象可以继承另外一类对象的特征，继承又可分为单继承和多继承。
         6. 多态：使得在多个类中可以定义同一个操作或属性名称，并在每个类中可以有不同的体现。多态使得某个属性或操作在不同的时期可以表示不同类的对象特性。
-        7. 接口：描述对操作规范的说明，其只说明操作应该做什么，并没有定义操作如何做。可以将接口理解成为类的一个特例，它规定了实现此接口的类的操作方法，把真正的实现细节交由实现该接口的类去完成。
-        8. 消息：体现对象间的交互，通过它向目标对象发送操作请求。
+        7. 接口：描述对`操作规范`的说明，其只说明操作应该做什么，并没有定义操作如何做。可以将接口理解成为类的一个特例，它规定了实现此接口的类的操作方法，把真正的实现细节交由实现该接口的类去完成。
+        8. 消息：`体现对象间的交互`，通过它向目标对象发送操作请求。
         9. 组件：表示软件系统可替换的、物理的组成部分，封装了模块功能的实现。组件应当是内聚的，并具有相对稳定的公开接口。
         10. 复用：指将已有的软件及其有效成分用于构造新的软件或系统。组件技术是软件复用实现的关键。
         11. 模式：描述了一个不断重复发生的问题，以及该问题的解决方案。其包括特定环境、问题和解决方案3个组成部分。应用设计模式可以更加简单和方便地去复用成功的软件设计和架构，从而帮助设计者更快更好地完成系统设计。
+    8. 面向对象方法的优点：
+        1. 采用全新的面向对象思想,使得系统的描述及信息模型的表示与客观实体相对应,符合人类的思维习惯,有 利于系统开发过程中用户与开发人员的交流和沟通,缩短开发周期,提高系统开发的正确性和效率; 
+        2. 系统开发的基础统一于对象之上,各个阶段工作过渡平滑,避免了许多中间转换环节和多余劳动,加快了系 统开发的进程; 
+        3. 面向对象技术中的各种概念和特性,如继承,封装, 多态性及消息传递机制等,使软件的一致性,模块的独立性,程序的共享和可重用性大大提高,也与分布式处理,多机系统及网络通信等发展趋势相吻合,具有广阔的应用前景; 
+        4. 许多新型的软件中,采用或包含了面向对象的概念和有关技术,为面向对象的开发方法的应用提供了强大的技术支持，普适于各类信息系统的开发。
 5. UML
-    1. 在统一建模语言（UML）中，`用例图`用于描述系统与外部系统及用户之间的交互。
+    1. 习题
+        1. uml图不包括（）。 - 信管网 http://www.cnitpm.com/st/3871823447.html
+        2. 解析：关于UML的描述，不正确的是：（）。 A、UML是一种可视化编程语言 B、UML适用于各种软件开发方法 C、U - 试题库 - 信管网 http://www.cnitpm.com/pm1/57235.html
+        3. 解析：A、逻辑视图（）又称为设计视图，它表示了设计模型中在架构方面具有重要意义的部分，即类、子系统、 - 试题库 - 信管网 https://www.cnitpm.com/pm1/50743.html
+        4. 解析：面向对象软件开发方法的主要优点包括（）。 ①符合人类思维习惯 ②普适于各类信息系统的开发 ③构造 - 试题库 - 信管网 http://www.cnitpm.com/pm1/50662.html
+        5. 解析：面向对象的软件开发过程是用例驱动的，用例是UML的重要部分，用例之间存在着一定的关系，下图表示的 - 试题库 - 信管网 https://www.cnitpm.com/pm1/45904.html
+    2. 统一建模语言（UML ）是一个通用的可视化的建模语言，并不是一种编程语言。它是面向对象分析和设计的一种标准化表示用于对软件进行描述、可视化处理、构造和建立软件系统的文档。 
+    3. UML 2.0包括14种图，交互图展现了一种交互，它由一组对象或参与者以及它们之间可能发送的消息构成。交互图专注于系统的动态视图。交互图包括：`顺序图、通信图、定时图`。uml14种图分别列举如下：
+        1. 类图(class diagram)：类图描述一组类、接口、协作和它们之间的关系。在00系统的建模中，最常见的图就是类图。粪图给出了系统的静态设计视图，活动类的类图给出了系统的静态进程视图。
+        2. 对象图(object diagram)：对象图描述一组对象及它们之间的关系。对象图描述了在类图中所建立的事物实例的静态快照。和类图一样，这些图给出系统的静态设计视图或静态进程视图，但它们是从真实案例或原型案例的角度建立的。
+        3. 构件图（component diagram）：构件图描述一个封装的类和它的接口、端口，以及由内嵌的构件和连接件构成的内部结构。构件图用于表示系统的静态设计实现视图。对于由小的部件构建大的系统来说，构件图是很重要的。构件图是类图的变体。
+        4. 组合结构图（composite structure diagram）：组合结构图描述结构化类（例如，构件或类）的内部结构，包括结构化类与系统其余部分的交互点。组合结构图用于画出结构化类的内部内容。
+        5. 用例图(use case diagram)：用例图描述一组用例、参与者及它们之间的关系。用例图给出系统的静态用例视图。这些图在对系统的行为进行组织和建模时是非常重要的。在统一建模语言（UML）中，`用例图`用于描述系统与外部系统及用户之间的交互。用例除了与参与者有关联（association）关系外，用例之间也存在着一定的关系（relationship），如泛化（generalization）关系、`包含（include）关系`、扩展（extend）关系等。
+        6. 顺序图（sequence diagram，也称序列图）：顺序图是一种交互图(interactiondiagram)．交互图展现了一种交互，它由一组对象或参与者以及它们之间可能发送的消息构成。交互图专注于系统的动态视图。顺序图是强调消息的时间次序的交互图。
+        7. 通信图(communication diagram)：通信图也是一种交互图，它强调收发消息的对象或参与者的结构组织。顺序图和通信图表达了类似的基本概念，但它们所强调的概念不同，顺序图强调的是时序，通信图强调的是对象之间的组织结构（关系）。在UML I.X版本中，通信图称为协作图( collaboration diagram)。
+        8. 定时图（timing diagram，也称计时图）：定时图也是一种交互图，它强调消息跨越不同对象或参与者的实际时间，而不仅仅只是关心消息的相对顺序。
+        9. 状态图（state diagram）：状态图描述一个状态机，它由状态、转移、事件和活动组成。状态图给出了对象的动态视图。它对于接口、类或协作的行为建模尤为重要，而且它强调事件导致的对象行为，这非常有助于对反应式系统建模。
+        10. 活动图(activity diagram)：活动图将进程或其他计算结构展示为计算内部一步步的控制流和数据流。活动图专注于系统的动态视图。它对系统的功能建模和业务流程建模特别重要，并强调对象间的控制流程。
+        11. 部署图（deployment diagram）：部署图描述对运行时的处理节点及在其中生存的构件的配置。部署图给出了架构的静态部署视图，通常一个节直包含一个或多个部署图。
+        12. 制品图（artifact diagram）：制品图描述计算机中一个系统的物理结构。制品包括文件、数据库和类似的物理比特集合。制品图通常与部署图一起使用。制品也给出了它们实现的类和构件。
+        13. 包图(package diagram)：包图描述由模型本身分解而成的组织单元，以及它们之间的依赖关系。
+        14. 交互概览图(interaction overview diagram)：交互概览图是活动图和顺序图的混合物。
+    4. UML 通过五个视图来定义系统架构
+        1. 逻辑视图：逻辑视图也称为`设计视图`，它表示了设计模型中在架构方面具有重要意义的部分，即类、子系统、包和用例实现的子集。
+        2. 进程视图：进程视图是可执行线程和进程作为活动类的建模，它是逻辑视图的一次执行实例，描述了并发与同步结构。
+        3. 实现视图：实现视图对组成基于系统的物理代码的文件和构件进行建模。
+        4. 部署视图：部署视图把构件部署到一组物理节点上，表示软件到硬件的映射和分布结构。
+        5. 用例祝图：用例视图是最基本的需求分析模型。
 6. 企业应用技术
     1. EAI包括的内容很复杂，涉及到结构、硬件、软件以及流程等企业系统的各个层面，具体可分为如下的集成界面，`界平数应过`
         1. 界面集成
@@ -106,52 +150,67 @@
         3. 共存性：在公共环境中同与其分享公共资源的其他独立软件共存的能力 
         4. 易替换性：在同样的环境下，替代另一个相同用途的指定软件产品的能力
 8. 软件维护
-    1. 将软件维护定义为需要提供软件支持的全部活动。这些活动包括在交付前完成的活动，以及交付后完成的活动。交付前要完成的活动包括交付后的运行计划和维护计划等。交付后的活动包括软件修改、培训、帮助资料等。 
-    2. 软件系统的维护从性质上分为纠错型维护、适应型维护、预防型和完善型维护。
-        1. 纠错性维护。纠正在开发阶段产生而在测试和验收过程没有发现的错误。更正性维护: 更正交付后发现的错误。其主要包括：
+    1. 习题
+        1. 某央企的ERP系统已经稳定运行了3年，为了使用新业务发展的需要，运营团队近期接到数据库系统升级服务的任务 - 信管网 http://www.cnitpm.com/st/35738250.html
+    2. 将软件维护定义为需要提供软件支持的全部活动。这些活动包括在交付前完成的活动，以及交付后完成的活动。交付前要完成的活动包括交付后的运行计划和维护计划等。交付后的活动包括软件修改、培训、帮助资料等。 
+    3. 软件系统的维护从性质上分为纠错型维护、适应型维护、预防型和完善型维护。
+        1. 纠错性维护，或更正性维护。纠正在开发阶段产生而在测试和验收过程没有发现的错误。更正交付后发现的错误。由于系统测试不可能揭露系统存在的所有错误，因此在系统投入运行后频繁的实际应用过程中，就有可能`暴露出系统内隐藏的错误`。诊断和修正系统中遗留的错误，就是纠错性维护。纠错性维护时在系统运行中发生异常或故障时进行的，这种错误往往是遇到了从未用过的输入数据组合或是在与其他部分接口处产生的，因此只是在某些特定的情况下发生。有些系统运行多年以后才暴露出在系统开发中遗留的问题，这是不足为奇的。其主要包括：
             1. 设计错误；
             2. 程序错误；
             3. 数据错误；
             4. 文档错误；
-        2. 适应性维护。`为适应软件运行环境改变而做的修改`。使软件产品能够在变化后或变化中的环境中继续使用；环境改变的主要内容包括：
+        2. 适应性维护。`为适应软件运行环境改变而做的修改`。使软件产品能够在变化后或变化中的环境中继续使用。适应性维护时为了使`系统适应环境的变化而进行的维护`工作。一方面计算机科学技术迅速发展，硬件的更新周期越来越短，新的操作系统和原来操作系统的新版本不断推出，外部设备和其他系统部件经常有所增加和修改，这就是必然要求信息系统能够适应新的软硬件环境，以提高系统的性能和运行效率；另一方面，信息系统的使用寿命在延长，超过了最初开发这个系统时应用环境的寿命，即应用对象也在不断发生变化，机构的调整，管理体制的改变、数据与信息需求的变更等都将导致系统不能适应新的应用环境。如代码改变、数据结构变化、数据格式以及输入/ 输出方式的变化、数据存储介质的变化等，都将直接影响系统的正常工作。因此有必要对系统进行调整，使之适应应用对象的变化，满足用户的需求。环境改变的主要内容包括：
             1. 影响系统的规划或规律的变化；
             2. 硬件配置的变化，如机型、终端和外部设备的改变等；
             3. 数据格式或文件结构的改变；如某软件系统进行升级，将某字段的长度由原先的32位增加到64位
             4. 软件支持环境的改变，如操作系统、编译器或实用程序的变化等。
-        3. 完善性维护。为扩充功能或改善性能而进行的修改。修改方式有插入、删除、扩充和增强等。改进交付后产品的性能和可维护性。主要内容包括：
+        3. 完善性维护。为扩充功能或改善性能而进行的修改。修改方式有插入、删除、扩充和增强等。改进交付后产品的性能和可维护性。在系统的使用过程中，`用户往往要求扩充原有系统的功能`，增加一些在软件需求规范书中没有规定的功能与性能特征，以及对处理效率和编写程序的改进。例如，有时可将几个小程序合并成一个单一的运行良好的程序，从而提高处理效率；增加数据输出的图形方式；增加联机在线帮助功能；调整用户界面等。尽管这些要求在原来系统开发的需求规格说明书中并没有，但用户要求在原有系统基础上进一步改善和提高；并且随着用户对系统的使用和熟悉，这种要求可能不断提出。为了满足这些要求而进行的系统维护工作就是完善性维护。。主要内容包括：
             1. 为扩充和增强功能而做的修改，如扩充解题范围和算法优化等；
             2. 为改善性能而做的修改，如提高运行速度、节省存储空间等；
             3. 为便于维护而做的修改，如为了改进易读性而增加一些注释等。
-        4. 预防性维护。为了明天的需要，把今天的方法应用到昨天的系统中，目的是为了使旧系统焕发新活力，这样的维护是预防型维护，这种维护所占的比例很小，因为它耗资巨大。在软件产品中的潜在错误成为实际错误前，检测并更正它们。
+        4. 预防性维护。为了明天的需要，把今天的方法应用到昨天的系统中，目的是为了使旧系统焕发新活力，这样的维护是预防型维护，这种维护所占的比例很小，因为它耗资巨大。在软件产品中的潜在错误成为实际错误前，检测并更正它们。系统维护工作不应总是被动地等待用户提出要求后才进行，应进行主动的预防性维护，即选择那些还有较长使用寿命，目前尚能正常运行，但可能将要发生变化或调整的系统进行维护，目的是通过预防性维护为未来的修改与调整奠定更好的基础。例如，将目前能应用的报表功能改成通用报表生成功能，以应付今后报表内容和格式可能的变化，根据对各种维护工作分布情况的统计结果，一般纠错性维护占21%，适应性维护工作占25%，完善性维护达到50%，而预防性维护以及其他类型的维护仅占4%，可见系统维护工作中，一半以上的工作室完善性维护。
 9. 软件质量保证及质量评价
+    1. 习题
+        1. 解析：软件质量管理过程由许多活动组成，“确保活动的输出产品满足活动的规范说明”是（）活动的目标。 A、 - 试题库 - 信管网 http://www.cnitpm.com/pm1/58184.html
     1. 软件质量指的是软件特性的总和，是软件满足用户需求的能力，即遵从用户需求，达到用户满意。软件质量包括“内部质量”“外部质量”和“使用质量”三部分。软件需求定义了软件质量特性，及确认这些特性的方法和原则。 
     2. 软件质量管理过程由许多活动组成，一些活动可以直接发现缺陷，另一些活动则检查活动的价值。其中包括质量保证过程、验证过程、确认过程、评审过程、审计过程等。
         1. 软件质量保证：通过制订计划、实施和完成等活动保证项目生命周期中的软件产品和过程符合其规定的要求。
             1. 软件质量保证是一系列活动，这些活动能够提供整个软件产品的适用性的证明。要实现软件质量保证，就需要使用为确保一致性和延长的软件周期而建立的质量控制规则。而质量保证、质量控制、审核功能以及软件测试之间的关系经常容易使人迷惑。 
             2. 为了生产出满足客户需求的产品，就必须遵循一定的过程。质量保证是一系列的支持措施，有了这些措施，这些过程的建立和改进就有了保障。在质量保证的过程中，产品质量将和可用的标准相比较，同时也要和不一致产生时的行为相比较。而`审核则是一个检查/评估的活动，用以验证与计划、原则以及过程的一致性`。
             3. 软件质量保证的主要职责是：`检查开发和管理活动是否与已定的过程策略、标准和流程一致，检查工作产品是否遵循模板规定的内容和格式`。 
-        2. 验证与确认：确定某一活动的产品是否符合活动的需求，最终的软件产品是否达到其意图并满足用户需求。验证过程试图确保活动的输出产品已经被正确构造，即`活动的输出产品满足活动的规范说明`；确认过程则试图确保构造了正确的产品，即产品满足其特定的目的。 
+        2. 验证与确认：确定某一活动的产品是否符合活动的需求，最终的软件产品是否达到其意图并满足用户需求。
+            1. `验证`过程试图确保活动的输出产品已经被正确构造，即`活动的输出产品满足活动的规范说明`；
+            2. `确认`过程则试图确保构造了正确的产品，即产品满足其特定的目的。 
         3. 评审与审计：包括管理评审、技术评审、检查、走查、审计等。
             1. `管理评审的目的是监控进展，决定计划和进度的状态，或评价用于达到目标所用管理方法的有效性`
             2. `技术评审`的目的是`评价软件产品，以确定其对使用意图的适合性`。目标是识别规范说明与标准的差异，并向管理提供证据，以表明产品是否满足规范说明并遵从标准，而且可以控制变更。检查的目的是检测和识别软件产品异常。
             3. 审计：`为评估是否符合软件需求、规格说明、基线、标准、过程、指令、代码以及合同和特殊要求丽进行的一种独立的检查`：通过调查研究确定已制定的过程、指令、规格说明、代码和标准或其他的合同及特殊要求是否恰当和被遵守，以及其实现是否有效而进行的活动。`软件审计的目的是提供软件产品和过程对于可应用的规则、标准、指南、计划和流程的遵从性的独立评价`。审计是正式组织的活动，识别违例情况，并要生成审计报告，采取更正性行动。
             4. 走查是审评过程中采用的一种方法。走查时，软件设计者或程序开发人员指导一名或多名其他参加评审的成员，通读已书写的设计文档或编码，其他成员负责提出问题，并对有关技术、风格、可能的错误、是否有违背评审标准的地方进行评论。 
 10. 软件测试
-    1. 在软件开发过程中，造成错误的原因有很多，比如程序员的大意造成的编码错误，语法错误等。测试是为了评价和改进产品质量、识别产品的缺陷和问题而进行的活动。软件测试不是导致软件错误的原因，软件测试是针对一个程序的行为，在有限测试用例集合上，动态验证是否达到预期的行为，需要选取适当的测试用例。测试不仅是检查预防措施是否有效的主要手段，而且是识别由于某种原因预防措施无效而产生的错误的主要手段。需要大家注意的是，在广泛的测试活动成功完成后，软件可能仍有错误，交付后出现的软件失效的补救措施是通过软件维护来达成的。 
-    2. 软件测试是一个系列过程活动，包括软件测试需求分析，测试计划设计，测试用例设计，执行测试。因此，`软件测试贯穿于软件项目的整个生命过程`。
-    3. 分类
+    1. 习题
+        1. 解析：软件测试是发现软件错误（缺陷）的主要手段，软件测试方法可分为静态测试和动态测试，其中（）属于静 - 试题库 - 信管网 http://www.cnitpm.com/pm1/57046.html
+        2. 解析：以下关于软件需求分析和软件设计的叙述中，不正确的是（ ）C、需求分析是为了评价和改进产品质量，识 - 试题库 - 信管网 https://www.cnitpm.com/pm1/45581.html
+    2. 在软件开发过程中，造成错误的原因有很多，比如程序员的大意造成的编码错误，语法错误等。测试是为了评价和改进产品质量、识别产品的缺陷和问题而进行的活动。软件测试不是导致软件错误的原因，软件测试是针对一个程序的行为，在有限测试用例集合上，动态验证是否达到预期的行为，需要选取适当的测试用例。测试不仅是检查预防措施是否有效的主要手段，而且是识别由于某种原因预防措施无效而产生的错误的主要手段。需要大家注意的是，在广泛的测试活动成功完成后，软件可能仍有错误，交付后出现的软件失效的补救措施是通过软件维护来达成的。 
+    3. 软件测试是一个系列过程活动，包括软件测试需求分析，测试计划设计，测试用例设计，执行测试。因此，`软件测试贯穿于软件项目的整个生命过程`。
+    4. 分类
         1. `从是否关心软件内部结构和具体实现的角度`划分白盒测试、黑盒测试、灰盒测试。
             1. 静态结构分析法、代码检查法、代码覆盖率分析法均属于白盒测试方法
             2. 等价类划分法属于黑盒测试
         2. `从是否执行程序的角度`划分静态测试和动态测试 
-        3. `从软件开发的过程按阶段`划分有单元测试、集成测试、确认测试、系统测试、验收测试 
-    4. `回归测试`是指修改了旧代码后，重新进行测试以确认修改没有引入新的错误或导致其他代码产生错误。 
-    5. `集成测试`，也叫组装测试或联合测试。在单元测试的基础上，将所有模块按照设计要求（如根据结构图）组装成为子系统或系统，进行集成测试。 
-    6. `冒烟测试`的对象是每一个新编译的需要正式测试的软件版本，目的是确认软件基本功能正常，可以进行后续的正式测试工作。冒烟测试的执行者是版本编译人员。 
-    7. `测试是为了评价和改进产品质量、识别产品的缺陷和问题而进行的活动`。软件测试是针对一个程序的行为，在有限测试用例集合上，动态验证是否达到预期的行为。
-    8. 单元测试。单元测试也称为模块测试，测试的对象是可独立编译或汇编的程序模块、软件构件或00软件中的类（统称为模块），其目的是检查每个模块能否正确地实现设计说明中的功能、性能、接口和其他设计约束等条件，发现模块内可能存在的各种差错。单元测试的技术依据是软件详细设计说明书，着重从模块接口、局部数据结构、重要的执行通路、出错处理通路和边界条件等方面对模块进行测试。
-    9. 集成测试。集成测试的目的是检查模块之间，以及模块和已集成的软件之间的接口关系，并验证已集成的软件是否符合设计要求。集成测试的技术依据是软件概要设计文档。除应满足一般的测试准入条件外，在进行集成测试前还应确认待测试的模块均己通过单元测试。
-    10. 确认测试。`确认测试主要用于验证软件的功能、性能和其他特性是否与用户需求一致`。根据用户的参与程度，通常包括以下类型。
+        3. `从软件开发的过程按阶段`划分有单元测试、集成测试、确认测试、系统测试、验收测试
+    5. 测试的方法
+        1. 软件测试方法可分为静态测试和动态测试。
+            1. 静态测试是指被测试程序不在机器上运行，而采用人工检测和计算机辅助静态分析的手段对程序进行检测。静态测试包括对文档的静态测试和对代码的静态测试。对文档的静态测试主要以检查单的形式进行，而对代码的静态测试一般采用`桌前检查（Desk Checking）、代码走查和代码审查`。经验表明，使用这种方法能够有效地发现30%～70%的逻辑设计和编码错误。 
+            2. 动态测试是指在计算机上实际运行程序进行软件测试，一般采用白盒测试和黑盒测试方法。
+                1. 白盒测试也称为结构测试，主要用于软件单元测试中。它的主要思想是，将程序看作是一个透明的白盒，测试人员完全清楚程序的结构和处理算法，按照程序内部逻辑结构设计测试用例，检测程序中的主要执行通路是否都能按预定要求正确工作。白盒测试方法主要有控制流测试、数据流测试和程序变异测试等。另外，使用静态测试的方法也可以实现白盒测试。例如，使用人工检查代码的方法来检查代码的逻辑问题，也属于白盒测试的范畴。白盒测试方法中，最常用的技术是逻辑覆盖，即使用测试数据运行被测程序，考察对程序逻辑的覆盖程度。主要的覆盖标准有语句覆盖、判定覆盖、条件覆盖、条件/判定覆盖、条件组合覆盖、修正的条件/判定覆盖和路径覆盖等。 
+                2. 黑盒测试也称为功能测试，主要用于集成测试、确认测试和系统测试中。黑盒测试将程序看作是一个不透明的黑盒，完全不考虑（或不了解）程序的内部结构和处理算法，而只检查程序功能是否能按照SRS的要求正常使用，程序是否能适当地接收输入数据并产生正确的输出信息，程序运行过程中能否保持外部信息（例如，文件和数据库等）的完整性等。黑盒测试根据SRS所规定的功能来设计测试用例，一般包括等价类划分、边界值分析、判定表、因果图、状态图、随机测试、猜错法和正交试验法等。
+        4. `回归测试`是指修改了旧代码后，重新进行测试以确认修改没有引入新的错误或导致其他代码产生错误。 
+        5. `集成测试`，也叫组装测试或联合测试。在单元测试的基础上，将所有模块按照设计要求（如根据结构图）组装成为子系统或系统，进行集成测试。 
+        6. `冒烟测试`的对象是每一个新编译的需要正式测试的软件版本，目的是确认软件基本功能正常，可以进行后续的正式测试工作。冒烟测试的执行者是版本编译人员。
+    6. `测试是为了评价和改进产品质量、识别产品的缺陷和问题而进行的活动`。软件测试是针对一个程序的行为，在有限测试用例集合上，动态验证是否达到预期的行为。
+    7. 单元测试。单元测试也称为模块测试，测试的对象是可独立编译或汇编的程序模块、软件构件或00软件中的类（统称为模块），其目的是检查每个模块能否正确地实现设计说明中的功能、性能、接口和其他设计约束等条件，发现模块内可能存在的各种差错。单元测试的技术依据是软件详细设计说明书，着重从模块接口、局部数据结构、重要的执行通路、出错处理通路和边界条件等方面对模块进行测试。
+    8. 集成测试。集成测试的目的是检查模块之间，以及模块和已集成的软件之间的接口关系，并验证已集成的软件是否符合设计要求。集成测试的技术依据是软件概要设计文档。除应满足一般的测试准入条件外，在进行集成测试前还应确认待测试的模块均己通过单元测试。
+    9. 确认测试。`确认测试主要用于验证软件的功能、性能和其他特性是否与用户需求一致`。根据用户的参与程度，通常包括以下类型。
         1. 内部确认测试。内部确认测试主要由软件开发组织内部按照SRS进行测试。
         2. Alpha测试和Beta测试。对于通用产品型的软件开发而言，Alpha测试是指由用户在开发环境下进行测试，通过Alpha测试以后的产品通常称为Alpha版；Beta测试是指由用户在实际使用环境下进行洌试，通过Beta测试的产品通常称为Beta版。一般在通过Beta测试后，才能把产品发布或交付给用户。
         3. 验收测试。验收测试是指针对SRS，在交付前以用户为主进行的测试。其测试对象为完整的、集成的计算机系统。验收测试的目的是，在真实的用户工作环境下，检验软件系统是否满足开发技术合同或SRS。验收测试的结论是用户确定是否接收该软件的主要依据。除应满足一般测试的准入条件外，在进行验收测试之前，应确认被测软件系统已通过系统测试。
@@ -165,9 +224,11 @@
     14. `软件单元测试由承建单位组织，一般由软件开发组实施测试`。测试工作都不应该由监理方或者业主方组织
     15. 测试覆盖标准从发现错误的强弱能力依次是路径覆盖、条件组合覆盖、判定覆盖、条件覆盖、语句覆盖
 11. 软件设计
-    1. 软件设计是定义一个系统或组件的`架构、组件、接口`和其他特征的过程，并得到这个过程的结果。 
-    2. 软件设计包括软件架构设计和软件详细设计。`架构设计属于高层设计，主要描述软件的结构和组织，标识各种不同的组件`。
-    3. 典型架构 
+    1. 习题
+        1. 解析：在典型的软件架构模式中，（）模式是基于资源不对等，为实现共享而提出的。 A、管道/过滤器 B、事件 - 试题库 - 信管网 https://www.cnitpm.com/pm1/58186.html
+    2. 软件设计是定义一个系统或组件的`架构、组件、接口`和其他特征的过程，并得到这个过程的结果。 
+    3. 软件设计包括软件架构设计和软件详细设计。`架构设计属于高层设计，主要描述软件的结构和组织，标识各种不同的组件`。
+    4. 典型架构 
         1. 软件架构设计的一个核心问题是能否使用重复的架构模式，即能否达到架构级的软件重用。也就是说，能否在不同的软件系统中，使用同一种架构。 
         2. 软件架构模式描述了某一特定应用领域中系统的组织方式。它反映了领域中众多系统所共有的结构和语义特性，描述了如何将各个模块和子系统有效地组织成一个完整的系统。使用一些经过实践证实的解决方案（模式）可以有效地解决更多的软件开发问题。 
         3. 几种常见的架构模式如下。 
@@ -177,29 +238,38 @@
             4. 常见的架构模式之分层模式
             5. 常见的架构模式之知识库模式
             6. 常见的架构模式之客户机／服务器模式。客户/服务器模式（Client/Server，C/S）：`基于资源不对等，为实现共享而提出的模式`。 C/S模式将应用一分为二，服务器（后台）负责数据操作和事务处理，客户（前台）完成与用户的交互任务。
+    
 12. 结构化分析方法
     1. 结构化分析方法给出一组帮助系统分析人员产生功能规约的原理与技术。它一般利用图形表达用户需求，使用的手段主要有`数据流图、数据字典、结构化语言、判定表以及判定树`等。
 13. 软件设计、测试与维护
-    1. 软件设计
+    1. 习题
+        1. 解析：结束软件测试工作时，应按照软件配置管理的要求，将（）纳入配置管理。 A、全部测试工具 B、被测试软 - 试题库 - 信管网 http://www.cnitpm.com/pm1/57047.html
+    2. 软件设计
         1. 根据软件需求，产生一个软件内部结构的描述，并将其作为软件构造的基础。通过软件设计，描述出软件架构及相关组件之间的接口；然后，进一步详细地描述组件，以便能构造这些组件。 
         2. 通过软件设计得到要实现的各种不同模型，并确定昀终方案。其可以划分为软件架构设计（也叫做高层设计）和软件详细设计两个阶段。
-    2. 软件测试：
+    3. 软件测试：
         1. `测试是为了评价和改进产品质量、识别产品的缺陷和问题而进行的活动`。软件测试是针对一个程序的行为，在有限测试用例集合上，动态验证是否达到预期的行为。
         2. `测试不再只是一种仅在编码阶段完成后才开始的活动`。现在的软件测试被认为是一种应该包括在整个开发和维护过程中的活动，它本身是实际产品构造的一个重要部分。 
         3. 软件测试伴随开发和维护过程，通常可以在概念上划分为单元测试、集成测试和系统测试三个阶段。
+    4. 软件测试管理。软件测试的管理包括过程管理、配置管理和评审工作。
+        1. 过程管理。过程管理包括测试活动管理和测试资源管理。软件测试应由相对独立的人员进行。根据软件项目的规模、完整性级别和测试类别，软件测试可由不同机构组织实施。一般情况下，软件测试人员应包括测试项目负责人、测试分析员、测试设计员、测试程序员、测试员、测试系统管理员和配置管理员等。开始软件测试工作，一般应具备下列条件（准入条件）：具有测试合同（或项目计划）；具有软件测试所需的各种文档；所提交的被测软件已受控；软件源代码已正确通过编译或汇编。结束软件测试工作，一般应达到下列条件（准出条件）：已按要求完成了合同（或项目计划）所规定的软件测试任务；实际测试过程遵循了原定的软件测试计划和软件测试说明；客观、详细地记录了软件测试过程和软件测试中发现的所有问题；软件测试文档齐全，符合规范；软件测试的全过程自始至终在控制下进行；软件测试中的问题或异常有合理解释或正确有效的赴理；软件测试工作通过了测试评审；`全部测试工具、被测软件、测试支持软件和评审结果已纳入配置管理`。
+        2. 配置管理。应按照软件配置管理的要求，将测试过程中产生的各种工作产品纳入配置管理。由开发组织实施的软件测试，应将测试工作产品纳入软件项目的配置管理；由独立测试组织实施的软件测试，应建立配置管理库，将被测试对象和测试工作产品纳入配置管理。
+        3. 评审。测试过程中的评审包括测试就绪评审和测试评审。测试就绪评审是指在测试执行前对测试计划和测试说明等进行评审，评审测试计划的合理性和测试用例的正确性、完整性和覆盖充分性，以及测试组织、测试环境和设备、工具是否齐全并符合技术要求等；测试评审是指在测试完成后，评审测试过程和测试结果的有效性，确定是否达到测试目的，主要对测试记录和测试报告进行评审。
 14. 需求分析
-    1. `所有软件需求都必须可以被验证`。
-    2. 软件需求是针对待解决问题的特性的描述。所定义的需求必须可以被验证。在资源有限时，可以通过优先级对需求进行权衡。
-    3. 需求分析涉及分析需求的过程，其目的如下。 
+    1. 习题
+        1. 解析：需求分析是软件生存周期中的重要工作，以下描述不正确的是：（ ）。 A、软件需求是针对待解决问题 - 试题库 - 信管网 https://www.cnitpm.com/pm1/51306.html
+    2. `所有软件需求都必须可以被验证`。
+    3. 软件需求是针对待解决问题的特性的描述。所定义的需求必须可以被验证。在资源有限时，可以通过优先级对需求进行权衡。
+    4. 需求分析涉及分析需求的过程，其目的如下。 
         1. 检测和解决需求之间的`冲突`。 
         2. 发现软件的边界，以及软件与其环境如何`交互`。 
         3. 详细描述系统需求，以`导出软件需求`。 
-    4. `需求分析阶段要确定对系统的综合要求、功能要求和性能要求等。而概要设计、详细设计均是对系统的具体设计方案的分析。程序设计即为编码过程`。 
-    5. 软件需求包括 3 个不同的层次：业务需求、用户需求和功能需求。 
+    5. `需求分析阶段要确定对系统的综合要求、功能要求和性能要求等。而概要设计、详细设计均是对系统的具体设计方案的分析。程序设计即为编码过程`。 
+    6. 软件需求包括 3 个不同的层次：业务需求、用户需求和功能需求。 
         1. 业务需求（ Business requirement ） `表示组织或客户高层次的目标`。业务需求通常来自项目投资人、购买产品的客户、实际用户的管理者、市场营销部门或产品策划部门。业务需求描述了组织为什么要开发一个系统，即组织希望达到的目标。使用前景和范围（ vision and scope ）文档来记录业务需求，这份文档有时也被称作项目轮廓图或市场需求（ project charter 或 market requirement ）文档。`业务需求是指反映企业或客户对系统高层次的目标要求`，通常来自项目投资人、购买产品的客户、客户单位的管理人员、市场营销部门或产品策划部门等。通过业务需求可以确定项目视图和范围，项目视图和范围文档把业务需求集中在一个简单、紧凑的文档中，该文档为以后的开发工作奠定了基础。
         2. 用户需求（ user requirement ） 描述的是用户的目标，或用户要求系统必须能完成的任务。用例、场景描述和事件――响应表都是表达用户需求的有效途径。也就是说用户需求描述了用户能使用系统来做些什么。 
         3. 功能需求（ functional requirement ） 规定开发人员必须在产品中实现的软件功能，用户利用这些功能来完成任务，满足业务需求。功能需求有时也被称作行为需求（ behavioral requirement ），因为习惯上总是用“应该”对其进行描述：“系统应该发送电子邮件来通知用户已接受其预定”。功能需求描述是开发人员需要实现什么。
-    6. 可以把需求工程的活动划分为以下5个独立的阶段： 
+    7. 可以把需求工程的活动划分为以下5个独立的阶段： 
         1. 需求获取：通过与用户的交流，对现有系统的观察及对任务进行分析，从而开发、捕获和修订用户的需求； 
         2. 需求建模：为最终用户所看到的系统建立一个概念模型，作为对需求的抽象描述，并儘可能多的捕获现实世界的语义； 
         3. 形成需求规格：生成需求模型构件的精确的形式化的描述，作为用户和开发者之间的一个协约； 
@@ -229,4 +299,23 @@
     4. 系统实施阶段。系统实施阶段是将设计的系统付诸实施的阶段。这一阶段的任务包括计算机等设备的购置、安装和调试、程序的编写和调试、人员培训、数据文件转换、系统调试与转换等。这个阶段的特点是几个互相联系、互相制约的任务同时展开，必须精心安排、合理组织。系统实施是按实施计划分阶段完成的，每个阶段应写出实施进展报告。系统测试之后写出系统测试分析报告。
     5. 系统运行和维护阶段。系统投入运行后，需要经常进行维护和评价，记录系统运行的情况，根据一定的规则对系统进行必要的修改，评价系统的工作质量和经济效益。
 19. 软件架构
-    1. 软件架构是“一个描述软件系统的子系统和组件，以及它们之间相互关系的学科”。架构试图定义软件的内部结构。通过视图可以从不同角度描述软件结构，主要包括`逻辑视图（满足功能需求）、过程视图（并发问题）、组件视图（实现问题）、部署视图（分布问题）`。 
+    1. 习题
+        1. 信息系统项目管理师教程第3版：软件架构风格 - 综合知识 - 信管网 http://www.cnitpm.com/pm1/49062.html
+        2. 老于是某银行的系统架构师，他为银行投资管理系统设计的软件架构包括进程通信和事件驱动的系统，该软件架构风格属于（）。 - 信管网 https://www.cnitpm.com/st/386984628.html
+        3. 解析：研究软件架构的根本目的是解决软件的复用、质量和维护问题，软件架构设计是软件开发过程中关键的一步 - 试题库 - 信管网 http://www.cnitpm.com/pm1/49589.html
+    2. 软件架构是“一个描述软件系统的子系统和组件，以及它们之间相互关系的学科”。架构试图定义软件的内部结构。通过视图可以从不同角度描述软件结构，主要包括`逻辑视图（满足功能需求）、过程视图（并发问题）、组件视图（实现问题）、部署视图（分布问题）`。 
+    3. 软件架构风格
+        1. 软件架构设计的一个核心问题是能否达到架构级的软件复用，也就是说，能否在不同的系统中，使用同一个软件架构。软件架构风格是描述某一特定应用领域中系统组织方式的惯用模式(idiomatic paradigm)。架构风格定义了一个系统“家族”，即一个架构定义、一个词汇表和一组约束。词汇表中包含一些构件和连接件类型，而约束指出系统是如何将这些构件和连接件组合起来的。架构风格反映了领域中众多系统所共有的结构和语义特性，并指导如何将各个构件有效地组织成一个完整的系统。
+        2. Garlan和Shaw对通用软件架构风格进行了分类，他们将软件架构分为数据流风格、调用，返回风格、独立构件风格、虚拟机风格和仓库风格。
+            1. 数据流风格：数据流风格包括批处理序列和管道／过滤器两种风格。
+            2. 调用／返回风格：调用／返回风格包插主程序／子程序、数据抽象和面向对象，以及层次结构。
+            3. 独立构件风格：独立构件风格包括`进程通信和事件驱动`的系统。
+            4. 虚拟机风格：虚拟机风格包括解释器和基于规则的系统。
+            5. 仓库风格：仓库风格包括数据库系统、黑板系统和超文本系统。
+    4. 软件架构评估
+        1. 软件架构设计是软件开发过程中关键的一步。对于当今世界上庞大而复杂的系统来说，没有一个合适的架构而要有一个成功的软件设计几乎是不可想象的。不同类型的系统需要不同的架构，甚至一个系统的不同子系统也需要不同的架构。架构的选择往往会成为一个系统设计成败的关键。但是，怎样才能知道为系统所选用的架构是恰当的呢？如何确保按照所选用的架构能顺利地开发出成功的软件产品呢？要回答这些问题并不容易，因为它受到很多因素的影响，需要专门的方法来对其进行评估。软件架构评估可以只针对一个架构，也可以针对一组架构。在架构评估过程中，`评估人员所关注的是系统的质量属性`。
+        2. 在分析具体架构评估方法之前，我们先来了解两个概念，分别是敏感点(sensitivitypoint)和权衡点(tradeoff point)。敏感点是一个或多个构件（和／或构件之间的关系）的特性，权衡点是影响多个质量届性的特性，是多个质量属性的敏感点。例如，改变加密级别可能会对安全性和性能产生非常重要的影响。提高加密级别可以提高安全性，但可能要耗费更多的处理时间，影响系统性能。如果某个机密消息的处理有严格的时间延迟要求，则加密级别可能就会成为一个权衡点。
+        3. 从目前已有的软件架构评估技术来看，可以归纳为三类主要的评估方式，分别是基于调查问卷（或检查表）的方式、基于场景的方式和基于度量的方式。这三种评估方式中，基于场景的评估方式最为常用。
+        4. 基于场景的方式主要包括：架构权衡分析法(Architecture Tradeoff Analysis Method，ATAM)、软件架构分析法（Sofiware Architecture Analysis Method，SAAM）和成本效益分析法(Cost Benefit Analysis Method，CBAM)中。在架构评估中，一般采用刺激( stimulus)、环境(environment)和响应(response)三方面来对场景进行描述。刺激是场景中解释或描述项目干系人怎样引发与系统的交互部分，环境描述的是刺激发生时的情况，响应是指系统是如何通过架构对刺激作出反应的。
+        5. 基于场景的方式分析软件架构对场景的支持程度，从而判断该架构对这一场景所代袭的质量需求的满足程度。例如，用一系列对软件的修改来反映易修改性方面的需求，用一系列攻击性操作来代表安全性方面的需求等。这一评估方式考虑到了所有与系统相关的人员对质量的要求，涉及的基本活动包括确定应用领域的功能和较件架构之间的映射，设计用于体现待评估质量属性的场景，以及分析软件架构对场景的支持程度。
+        6. 不同的系统对同一质量属性的理解可能不同，例如，对操作系统来说，可移植性被理解为系统可在不同的硬件平台上运行，而对于普通的应用系统而言，可移植性往往是指该系统可在不同的操作系统上运行。由于存在这种不一致性，对一个领域适合的场景设计在另一个领域内未必合适，因此，基于场景的评估方式是特定于领域的。这一评估方式的实施者一方面需要有丰富的领域知识，以对某一质量需求设计出合理的场景：另一方面，必须对待评估的软件架构有一定的了解，以准确判断它是否支持场景描述的一系列活动。
