--- a/manage/02.信息系统项目管理师/08.信息系统服务管理.md
+++ b/manage/02.信息系统项目管理师/08.信息系统服务管理.md
@@ -20,7 +20,7 @@
         3. 当`专业监理工程师`需要调整时，总监理工程师应书面通知建设单位和承建单位。
 总监理工程师由具有高级监理工程师任职资格的监理人员出任;根据实际情况，也可选择具有3年以上任职经历、业绩突出的监理工程师出任。
 5. 监理
-    1. 监理的主要工作：四控三管一协调。`投进质变安信合`，再加上沟通协调
+    1. 监理的主要工作：四控三管一协调。`投进质变安信合 氨锌合`，再加上沟通协调
         1. 四控
             1. 投资控制
             2. 进度控制
@@ -122,10 +122,10 @@
                 4. 结合市场和业务发展需求，确保能及时更新资源，提高资源的使用率和使用质量。
 10. 信息系统审计
     1. `管基资恢开业，馆集资会开业`。对一个信息系统审计的主要组成部分包括以下6个方面：
-        1. 信息系统的管理、规划与组织：评价信息系统的管理、计划与组织方面的策略、政策、标准、程序和相关实务。
+        1. `信息系统的管理、规划与组织`：评价信息系统的管理、计划与组织方面的策略、政策、标准、程序和相关实务。
         2. 信息系统技术基础设施与操作实务：评价组织在技术与操作基础设施的管理和实施方面的有效性及效率，以确保其充分支持组织的商业目标。
-        3. 资产的保护：对逻辑、环境与信息技术基础设施的安全性进行评价，确保其能支持组织保护信息资产的需要，防止信息资产在未经授权的情况下被使用、披露、修改、损坏或丢失。
-        4. 灾难恢复与业务持续计划：这些计划是在发生灾难时，能够使组织持续进行业务，对这种计划的建立和维护流程需要进行评价。
+        3. `资产的保护`：对逻辑、环境与信息技术基础设施的安全性进行评价，确保其能支持组织保护信息资产的需要，防止信息资产在未经授权的情况下被使用、披露、修改、损坏或丢失。
+        4. `灾难恢复与业务持续计划`：这些计划是在发生灾难时，能够使组织持续进行业务，对这种计划的建立和维护流程需要进行评价。
         5. 应用系统开发、获得、实施与维护：对应用系统的开发、获得、实施与维护方面所采用的方法和流程进行评价，以确保其满足组织的业务目标。
         6. 业务流程评价与风险管理：评估业务系统与处理流程，确保根据组织的业务目标对相应风险实施管理。
     2. 基本业务如下。 
