--- a/manage/02.信息系统项目管理师/07.计算机网络知识.md
+++ b/manage/02.信息系统项目管理师/07.计算机网络知识.md
@@ -153,7 +153,12 @@
         4. 安全审计系统 安全审计系统通过独立的、对网络行为和主机操作提供全面与忠实的记录，方便用户分析与审查事故原因，很像飞机上的黑匣子。由于数据量和分析量比较大，目前市场上鲜见特别成熟的产品，即使存在冠以审计名义的产品，也更多的是从事入侵检测的工作。
 14. 网络交换技术 
     1. 网络交换是指通过一定的设备，如交换机等，将不同的信号或者信号形式转换为对方可识别的信号类型从而达到通信目的的一种交换形式，常见的有`数据交换、线路交换、报文交换和分组交换`。 
-    2. 在计算机网络中，按照交换层次的不同，网络交换可以分为物理层交换（如电话网）、`链路层交换（二层交换，对 MAC地址进行变更）`、网络层交换（三层交换，对 IP地址进行变更）、传输层交换（四层交换，对端口进行变更，比较少见）和应用层交换（似乎可以理解为 Web网关等）。 
+    2. 在计算机网络中，按照交换层次的不同，网络交换可以分为
+        1. 物理层交换（如电话网）
+        2. `链路层交换（二层交换，对 MAC地址进行变更）`
+        3. 网络层交换（三层交换，对 `IP地址进行变更`）
+        4. 传输层交换（四层交换，对端口进行变更，比较少见）
+        5. 应用层交换（似乎可以理解为 Web网关等）。 
     3. 网络中的数据交换可以分为电路交换、分组交换（数据包交换）、ATM交换、全光交换和标记交换。其中电路交换有预留，且分配一定空间，提供专用的网络资源，提供有保证的服务，应用于电话网；而分组交换无预留，且不分配空间，存在网络资源争用，提供有无保证的服务。分组交换可用于数据报网络和虚电路网络。`Internet就是数据报网络，单位是Bit，而 ATM则用的是虚电路网络，单位是码元`。
 15. 高可用性和高可靠性的规划与设计
     1. 由于可靠性指标直接影响可用性指标，所以一般我们将这两个指标一并分析与讨论。
